--- a/app/src/main/res/values-az/strings.xml
+++ b/app/src/main/res/values-az/strings.xml
@@ -239,12 +239,9 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Təsdiq edildi</string>
   <!--CreateProfileActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Profil məlumatların</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Profil şəklinin təyini zamanı xəta</string>
   <string name="CreateProfileActivity_problem_setting_profile">Profilin quraşdırılmasında problem</string>
   <string name="CreateProfileActivity_profile_photo">Profil şəkli</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">Çox uzundur</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Profil Adı</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Profilini quraşdır</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Signal profilləri son məqama qədər şifrəlidir və Signal-ın bu məlumatlara girişi mümkün deyil.</string>
   <!--CustomDefaultPreference-->
@@ -474,10 +471,6 @@
   <!--PlacePickerActivity-->
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Quraşdırdığın Google Play Servis versiyası düzgün işləmir. Zəhmət olmasa Google Play Servisini yenidən quraşdır və sına.</string>
-  <!--ProfileEditNameFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Yaddaşa yaz</string> -->
-  <!--ProfileEditOverviewFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Profil</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Bu aplikasıyanı qiymətləndir</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Aplikasiyanı istifadə etməkdən zövq alırsansa, lütfən bizi qiymətləndirmək üçün bir neçə saniyəni istifadə et.</string>
@@ -931,10 +924,7 @@
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Sənin simsiz daşıyıcın vasitəsilə media və qrup mesajlarını çatdırmaq üçün Signal MMS parametrlərini tələb edir. Cihazın bu məlumatı əlçatan etmir, hansı ki kilidli cihazlar və qadağa edilmiş konfiqurasiyalarda baş verir.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Media və qrup mesajı göndərmək üçün \'OK\'-i kliklə və tələb edilən parametrləri tamamla. MMS parametrlərin \'sənin daşıyıcı APN\'-ində axtarış etməklə əldə edilə bilər. Bunu cəmi bir dəfə etməli olacaqsan.</string>
   <!--profile_create_activity-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Daha sonra quraşdır</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">BİTİR</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Bu məlumatı kim görə bilər?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Sənin adın</string> -->
+  <string name="CreateProfileActivity_next">Növbəti</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Paylaşılmış media</string>
   <!--recipient_preferences-->
@@ -1327,7 +1317,6 @@
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Qeydiyyat Kilidin telefon nömrəni icazəsiz qeydiyyat cəhdlərindən qoruyur. Bu xüsusiyyət istənilən vaxt Signal-ın məxfilik parametrlərində deaktivasiya edilə bilər</string>
   <string name="RegistrationLockDialog_registration_lock">Qeydiyyat Kilidi</string>
   <string name="RegistrationLockDialog_enable">Aktivləşdir</string>
-  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">Qeydiyyat Kilid PIN-i ən azı 4 rəqəmli olmalıdır.</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">Daxil etdiyin iki PIN bir-birinə uyğun gəlmir.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Xidmətlə əlaqədə xəta var</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Qeydiyyat Kilid PIN-ini deaktiv edirsən?</string>
