--- a/app/src/main/res/values-cy/strings.xml
+++ b/app/src/main/res/values-cy/strings.xml
@@ -300,12 +300,9 @@ Send neges heb ei ddiogelu?</string>
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Gwiriwyd</string>
   <!--CreateProfileActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Manylion eich proffil</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Gwall gosod llun proffil</string>
   <string name="CreateProfileActivity_problem_setting_profile">Anhawster gosod proffil</string>
   <string name="CreateProfileActivity_profile_photo">Llun proffil</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">Rhy hir</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Enw Proffil</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Creu eich proffil</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Mae proffiliau Signal wedi eu hamgryprio\'n llwyr ac nid oes gan wasanaeth Signal fynediad i\'r wybodaeth hwn.</string>
   <string name="CreateProfileActivity_set_avatar_description">Gosod rhithffurf</string>
@@ -594,17 +591,6 @@ Send neges heb ei ddiogelu?</string>
   <string name="PlacePickerActivity_accept_address">Derbyn y cyfeiriad</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Nid yw\'r fersiwn o Google Play Services rydych chi wedi\'i osod yn gweithredu\'n gywir. Ail-osodwch Google Play Services a cheisiwch eto.</string>
-  <!--ProfileEditNameFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">Enw proffil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Gall eich cysylltiadau, defnyddwyr eraill a grwpiau weld eich enw proffil pan fyddwch yn cychwyn sgwrs neu dderbyn cais am sgwrs.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Cadw</string> -->
-  <!--ProfileEditOverviewFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Proffil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">Enw proffilEnw proffil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">Enw defnyddiwr</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">Creu enw proffil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">Creu enw defnyddiwr</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Gall eich cysylltiadau, defnyddwyr eraill a grwpiau weld eich Proffil Signal pan fyddwch yn cychwyn sgwrs neu dderbyn cais am sgwrs. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Tapiwch yma i ddysgu ragor</a>.</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Graddio\'r ap</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Os ydych chi\'n mwynhau defnyddio\'r ap hwn, cymerwch amser i\'n helpu ni drwy ei raddio.</string>
@@ -848,7 +834,7 @@ Send neges heb ei ddiogelu?</string>
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">Agorwch Signal i weld hysbysiadau diweddar.</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
   <string name="MessageNotifier_unknown_contact_message">Cysylltiad</string>
-  <string name="MessageNotifier_reacted_to_your_message">Ateb eich neges: %1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_reacted_to_your_message">Ateb eich neges: %1$s</string> -->
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">Rhagosodiad</string>
   <string name="NotificationChannel_calls">Galwadau</string>
@@ -1121,10 +1107,11 @@ Send neges heb ei ddiogelu?</string>
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Mae ar Signal angen gosodiadau MMS i ddarparu negeseuon cyfrwng a grŵp trwy\'ch cludwr di-wifr. Nid yw\'ch dyfais yn gwneud y wybodaeth hon ar gael, sydd weithiau\'n wir ar gyfer dyfeisiau wedi\'u cloi a ffurfweddiadau cyfyngol eraill.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">I anfon negeseuon cyfryngau a grŵp, tapiwch \'Iawn\' a chwblhau\'r gosodiadau gofynnol. Yn gyffredinol, gall lleoliadau MMS eich cludwr gael eu lleoli trwy chwilio am \'eich APN cludwr\'. Dim ond unwaith y bydd angen i chi wneud hyn.</string>
   <!--profile_create_activity-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Gosod yn hwyrach</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">GORFFEN</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Pwy sy\'n gallu gweld y wybodaeth hon?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Eich enw</string> -->
+  <string name="CreateProfileActivity_first_name_required">Enw cyntaf (angenrheidiol)</string>
+  <string name="CreateProfileActivity_last_name_optional">Enw olaf (dewisol)</string>
+  <string name="CreateProfileActivity_next">Nesaf</string>
+  <string name="CreateProfileActivity__username">Enw defnyddiwr</string>
+  <string name="CreateProfileActivity__create_a_username">Creu enw defnyddiwr</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Cyfryngau wedi\'u rhannu</string>
   <!--recipient_preferences-->
@@ -1559,7 +1546,7 @@ Send neges heb ei ddiogelu?</string>
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Mae Clo Cofrestru yn helpu i ddiogelu eich rhif ffôn rhag ymdrechion cofrestru heb awdurdod. Gall y nodwedd hon gael ei analluogi ar unrhyw adeg yng ngosodiadau preifatrwydd Signal</string>
   <string name="RegistrationLockDialog_registration_lock">Clo Cofrestru</string>
   <string name="RegistrationLockDialog_enable">Galluogi</string>
-  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">Rhaid i\'r Clo Cofrestru PIN fod o leiaf 4 digid.</string> -->
+  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_d_digits">Rhaid i\'r PIN Clo Cofrestru fod yn o leiaf %d nod.</string>
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">Nid yw\'r ddau PIN rydych chi wedi\'u cofnodi yn cyfateb.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Gwall wrth gysylltu â\'r gwasanaeth</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Analluogi PIN Clo Cofrestru?</string>
