--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -271,12 +271,9 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Verificeret</string>
   <!--CreateProfileActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Din profil</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Fejl opstået ved oprettelse af profilbilledet</string>
   <string name="CreateProfileActivity_problem_setting_profile">Fejl opstod ved oprettelse af profil</string>
   <string name="CreateProfileActivity_profile_photo">Profilbillede</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">For langt</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Profil navn</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Konfigurer din profil</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Signal profiler er krypteret begge veje, og Signals services har ingen adgang til informationen</string>
   <string name="CreateProfileActivity_set_avatar_description">Vælg avatar</string>
@@ -552,17 +549,6 @@
   <string name="PlacePickerActivity_accept_address">Godkend adresse</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Din installerede version af Google Play tjenester virker ikke korrekt. Geninstallér venligst Google Play tjenester og prøv igen</string>
-  <!--ProfileEditNameFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">Profilnavn</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Dit profilnavn kan ses af dine kontakter, andre brugere og grupper, når du opretter en samtale eller accepterer en invitation til at deltage i en</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Gem</string> -->
-  <!--ProfileEditOverviewFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Profil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">Profilnavn</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">Brugernavn</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">Opret et profilnavn</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">Opret et brugernavn</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Din Signal profil kan ses af dine kontakter, andre brugere og grupper, når du opretter en samtale eller accepterer en invitation til at deltage i en. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Tap her for at læse mere</a></string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Bedøm app\'en</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Hvis du kan lide at bruge app\'en, så hjælp os venligst ved at bedømme den</string>
@@ -808,7 +794,7 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">Åbn Signal for at tjekke seneste notifikationer</string>
   <string name="MessageNotifier_contact_message">%1$s%2$s</string>
   <string name="MessageNotifier_unknown_contact_message">Kontakt</string>
-  <string name="MessageNotifier_reacted_to_your_message">Har reageret på din besked: %1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_reacted_to_your_message">Har reageret på din besked: %1$s</string> -->
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">Standard</string>
   <string name="NotificationChannel_calls">Opkald</string>
@@ -1065,10 +1051,9 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal kræver adgang til MMS-indstillinger for at levere medie og gruppebeskeder gennem din teleudbyder. Din enhed gør ikke denne information tilgængelig, hvilket nogle gange er tilfældet for låste enheder og andre begrænsende opsætninger</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">For at sende multimedie- og gruppebeskeder, tap \"OK\" og sæt de nødvendige indstillinger. MMS indstillingerne for din teleoperatør kan ofte findes ved at søge på \"din operatørs APN\". Dette skal kun gøres én gang</string>
   <!--profile_create_activity-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Senere</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">AFSLUT</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Hvem kan se denne information?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Dit navn</string> -->
+  <string name="CreateProfileActivity_next">Næste</string>
+  <string name="CreateProfileActivity__username">Brugernavn</string>
+  <string name="CreateProfileActivity__create_a_username">Opret et brugernavn</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Delt medie</string>
   <!--recipient_preferences-->
@@ -1500,7 +1485,6 @@ Der er %d dage tilbage</string>
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Registreringslås hjælper dig med at beskytte dit telefonnummer fra uautoriserede registreringsforsøg. Denne funktion kan til enhver tid slås fra under privatlivsindstillinger</string>
   <string name="RegistrationLockDialog_registration_lock">Registreringslås</string>
   <string name="RegistrationLockDialog_enable">Aktivér</string>
-  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">Registreringskoden skal være på mindst 4 cifre</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">De to PIN-koder du har indtastet er forskellige</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Fejl ved oprettelse af forbindelse til service</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Slå registreringskode fra?</string>
