--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -253,12 +253,9 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Επιβεβαιωμένο</string>
   <!--CreateProfileActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Οι πληροφορίες του προφίλ σας</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Πρόβλημα κατά τον καθορισμό φωτογραφίας προφίλ</string>
   <string name="CreateProfileActivity_problem_setting_profile">Πρόβλημα στον καθορισμό του προφίλ</string>
   <string name="CreateProfileActivity_profile_photo">Φωτογραφία προφίλ</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">Πολύ μακρύ </string> -->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Όνομα Προφίλ</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Στήστε το προφίλ σας</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Τα προφίλ του Signal είναι κρυπτογραφημένα από άκρο σε άκρο, και η υπηρεσία Signal δεν έχει ποτέ πρόσβαση σε αυτές τις πληροφορίες.</string>
   <!--CustomDefaultPreference-->
@@ -494,10 +491,6 @@
   <string name="PlacePickerActivity_accept_address">Αποδοχή διεύθυνσης</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Η έκδοση των Υπηρεσιών Google Play που έχετε εγκαταστήσει δε λειτουργεί σωστά. Παρακαλούμε επανεγκαταστήστε τις Υπηρεσίες Google Play και δοκιμάστε ξανά.</string>
-  <!--ProfileEditNameFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Αποθήκευση</string> -->
-  <!--ProfileEditOverviewFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Προφίλ</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Βαθμολογήστε αυτή την εφαρμογή</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Αν σας αρέσει αυτή η εφαρμογή, βοηθήστε μας βαθμολογώντας την - δε θα σας πάρει πολύ χρόνο.</string>
@@ -959,10 +952,7 @@
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Το Signal χρειάζεται τις ρυθμίσεις MMS για να στείλει μηνύματα πολυμέσων και ομαδικών συνομιλιών μέσω του παρόχου σας. Η συσκευή σας δεν παρέχει αυτές τις πληροφορίες, το οποίο μερικές φορές γίνεται σε κλειδωμένες συσκευές ή λόγω άλλων περιοριστικών ρυθμίσεων.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Για να στείλετε μηνύματα πολυμέσων, πατήστε \'ΟΚ\' και συμπληρώστε τις ρυθμίσεις. Θα βρείτε τις σωστές ρυθμίσεις MMS για τον πάροχό σας ψάχνοντας στο ίντερνετ για \"το όνομα του παρόχου σας\" + APN. Αυτές οι ρυθμίσεις γίνονται μόνο μια φορά.</string>
   <!--profile_create_activity-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Ορισμός αργότερα</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">ΤΕΛΟΣ</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Ποιοί μπορούν να δουν αυτές τις πληροφορίες; </string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Το όνομά σας</string> -->
+  <string name="CreateProfileActivity_next">Επόμενο</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Διαμοιρασμένα πολυμέσα</string>
   <!--recipient_preferences-->
@@ -1358,7 +1348,6 @@
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Το κλείδωμα εγγραφής βοηθά στην προστασία του αριθμού τηλεφώνου σας από μη εξουσιοδοτημένες απόπειρες εγγραφής. Αυτή η δυνατότητα μπορεί να απενεργοποιηθεί οποιαδήποτε στιγμή στις ρυθμίσεις ιδιωτικότοτητας του Signal.</string>
   <string name="RegistrationLockDialog_registration_lock">Κλείδωμα εγγραφής</string>
   <string name="RegistrationLockDialog_enable">Ενεργοποίηση</string>
-  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">Το PIN κλειδώματος εγγραφής πρέπει να είναι τουλάχιστον 4 ψηφία.</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">Τα δυο PIN που γράψατε δεν είναι τα ίδια.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Αποτυχία σύνδεσης στην υπηρεσία</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Απενεργοποίηση του PIN κλειδώματος εγγραφής;</string>
