--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -270,12 +270,9 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Verificado</string>
   <!--CreateProfileActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Información de perfil</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Fallo al establecer la foto de perfil</string>
   <string name="CreateProfileActivity_problem_setting_profile">Problema al crear el perfil</string>
   <string name="CreateProfileActivity_profile_photo">Foto de perfil</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">Demasiado largo</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Nombre de perfil</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Completa tu perfil</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Los perfiles de Signal están cifrados de extremo a extremo por lo que el servidor de Signal no tiene acceso a ningún dato.</string>
   <string name="CreateProfileActivity_set_avatar_description">Configurar avatar de perfil</string>
@@ -551,17 +548,6 @@
   <string name="PlacePickerActivity_accept_address">Aceptar dirección</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">La versión de Google Play Services que has instalado no funciona correctamente. Por favor, reinstala Google Play Services e inténtalo de nuevo.</string>
-  <!--ProfileEditNameFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">Nombre de perfil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Tu nombre de perfil puede ser visto por tus contactos y por otros usuarios o grupos cuando inicias un chat o aceptas una solicitud de chat.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Guardar</string> -->
-  <!--ProfileEditOverviewFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Perfil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">Nombre de perfil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">Nombre de usuario</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">Crear un nombre de perfil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">Crear un nombre de usuario</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Tu perfil de Signal puede ser visto por tus contactos y cualquier otro usuario de Signal o grupos cuando inicias un chat o aceptas una solicitud de chat. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Toca para saber más</a>.</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Valora esta aplicación</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Si disfrutas usando esta aplicación, por favor, tómate un momento para ayudarnos valorándola.</string>
@@ -808,7 +794,7 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">Abre Signal para comprobar las últimas notificaciones.</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
   <string name="MessageNotifier_unknown_contact_message">Contacto</string>
-  <string name="MessageNotifier_reacted_to_your_message">Reacción a tu mensaje: %1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_reacted_to_your_message">Reacción a tu mensaje: %1$s</string> -->
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">Por defecto</string>
   <string name="NotificationChannel_calls">Llamadas</string>
@@ -1065,10 +1051,11 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal necesita una configuración de MMS válida para enviar los mensajes multimedia y de grupo a través del proveedor móvil. Tu dispositivo no proporciona esta información, algo que ocasionalmente ocurre con dispositivos bloqueados y otras configuraciones restrictivas.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Para enviar mensajes multimedia y de grupo, toca «Aceptar» y completa las configuraciones solicitadas. Las configuraciones de MMS para tu proveedor generalmente se pueden localizar buscando por «APN de proveedor». Sólo necesitarás hacer esto una vez.</string>
   <!--profile_create_activity-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Completar más tarde</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">FINALIZADO</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">¿Quién puede ver esta información?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Tu nombre</string> -->
+  <string name="CreateProfileActivity_first_name_required">Nombre (necesario)</string>
+  <string name="CreateProfileActivity_last_name_optional">Apellido (opcional)</string>
+  <string name="CreateProfileActivity_next">Siguiente</string>
+  <string name="CreateProfileActivity__username">Nombre de usuario</string>
+  <string name="CreateProfileActivity__create_a_username">Crear un nombre de usuario</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Archivos multimedia compartidos</string>
   <!--recipient_preferences-->
@@ -1500,7 +1487,7 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">El bloqueo de registro ayuda a proteger tu número de teléfono de intentos de registro no autorizados. Esta característica se puede desactivar en cualquier momento en la configuración de privacidad de Signal.</string>
   <string name="RegistrationLockDialog_registration_lock">Bloqueo de registro</string>
   <string name="RegistrationLockDialog_enable">Activar</string>
-  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">El PIN de bloqueo de registro debe tener al menos 4 dígitos.</string> -->
+  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_d_digits">El PIN d bloqueo de registro debe tener al menos %d digitos.</string>
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">Los dos PINs no coinciden.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Fallo al conectar con el servicio</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">¿Desactivar el PIN de bloqueo de registro?</string>
