--- a/app/src/main/res/values-et/strings.xml
+++ b/app/src/main/res/values-et/strings.xml
@@ -270,12 +270,9 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Kontrollitud</string>
   <!--CreateProfileActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Sinu profiiliinfo</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Profiilipildi seadmisel tekkis viga</string>
   <string name="CreateProfileActivity_problem_setting_profile">Profiili seadistamisel tekkis probleem</string>
   <string name="CreateProfileActivity_profile_photo">Profiilipilt</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">Liiga pikk</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Profiili nimi</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Seadista oma profiil</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Signali profiilid on otspunktkrüpteeritud ning Signali teenusel ei ole kunagi sellele teabele juurdepääsu.</string>
   <string name="CreateProfileActivity_set_avatar_description">Määra profiilipildiks</string>
@@ -551,18 +548,6 @@
   <string name="PlacePickerActivity_accept_address">Kinnita aadress</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Google Play Services versioon, mis sul on installitud, ei toimi korrektselt. Palun taasinstalli Google Play Services ja proovi uuesti.</string>
-  <!--ProfileEditNameFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">Profiilinimi</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Sinu profiilinime näevad sinu kontaktid ning teised kasutajad või grupid, kui lood vestluse või võtad vastu vestluskutse.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Salvesta</string> -->
-  <!--ProfileEditOverviewFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Profiil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">Profiilinimi</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">Kasutajanimi</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">Loo profiilinimi</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">Loo kasutajanimi</string> -->
-  <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Sinu Signali profiili näevad sinu kontaktid ning teised kasutajad või grupid, kui lood vestluse või võtad vastu vestluskutse.
-<a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Rohkema lugemiseks koputa siia</a>.</string>
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Hinda seda rakendust</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Kui sa naudid selle rakenduse kasutamist, palun võta aega ja hinda seda, et meid aidata.</string>
@@ -809,7 +794,7 @@
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">Ava Signal et kontrollida viimaseid teateid.</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
   <string name="MessageNotifier_unknown_contact_message">Kontakt</string>
-  <string name="MessageNotifier_reacted_to_your_message">Reageeris sinu sõnumile: %1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_reacted_to_your_message">Reageeris sinu sõnumile: %1$s</string> -->
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">Vaikimisi</string>
   <string name="NotificationChannel_calls">Kõned</string>
@@ -1066,10 +1051,11 @@
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal vajab MMS-seadeid, et edastada meediat ja grupisõnumeid läbi sinu võrguteenuse pakkuja. Sinu seade ei tee seda informatsiooni saadavaks, mis esineb mõnikord lukustatud seadmete ja piiravate konfiguratsioonide puhul.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Et saata meedia- ja grupisõnumeid, koputa nupul \"OK\" ja lõpeta soovitud seaded. MMS-seaded sinu teenusepakkuja jaoks võib tavaliselt leida, otsides \"sinu teenusepakkuja APN\". Sa pead seda tegema ainult ühe korra.</string>
   <!--profile_create_activity-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Määra hiljem</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">LÕPETA</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Kes näeb seda infot?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Sinu nimi</string> -->
+  <string name="CreateProfileActivity_first_name_required">Eesnimi (kohustuslik)</string>
+  <string name="CreateProfileActivity_last_name_optional">Perekonnanimi (valikuline)</string>
+  <string name="CreateProfileActivity_next">Edasi</string>
+  <string name="CreateProfileActivity__username">Kasutajanimi</string>
+  <string name="CreateProfileActivity__create_a_username">Loo kasutajanimi</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Jagatud meedia</string>
   <!--recipient_preferences-->
@@ -1500,7 +1486,7 @@
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Registreerimislukk aitab kaitsta sinu telefoninumbrit soovimatute registreerimiskatsete eest. Seda funktsiooni saab igal ajal keelata sinu Signali privaatsusseadetest.</string>
   <string name="RegistrationLockDialog_registration_lock">Registreerimislukk</string>
   <string name="RegistrationLockDialog_enable">Luba</string>
-  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">Registreerimisluku PIN peab olema vähemalt 4-numbriline.</string> -->
+  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_d_digits">Registreerimisluku PIN peab koosnema vähemalt %d numbrist.</string>
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">Sisestatud PINid ei ole samad.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Teenusega ühendamisel esines viga</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Keelad registreerimisluku PINi?</string>
