--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -268,12 +268,9 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Egiaztatua</string>
   <!--CreateProfileActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Zure profilaren informazioa</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Errorea gertatu da profileko argazkia gordetzean</string>
   <string name="CreateProfileActivity_problem_setting_profile">Profila gordetzean errorea</string>
   <string name="CreateProfileActivity_profile_photo">Profileko argazkia</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">Luzeegia</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Profilaren izena</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Ezarri zure profila</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Signal profilak muturretik muturrera enkriptatuta daude, eta Signal zerbitzuak ez dauka informazio hau eskuratzerik.</string>
   <string name="CreateProfileActivity_set_avatar_description">Ezarri abatarra</string>
@@ -548,17 +545,6 @@
   <string name="PlacePickerActivity_accept_address">Onartu helbidea</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Instalatutako Google Play Services bertsioa ez dabil ongi.  Berrinstalatu Google Play Services eta saiatu berriro mesedez.</string>
-  <!--ProfileEditNameFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">Profilaren izena</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Zure kontaktuek eta beste erabiltzaile edo talde batzuek zure profil izena kusi dezakete solasaldi bat hasi edo solasaldi eskaera bat onartzen duzunean.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Gorde</string> -->
-  <!--ProfileEditOverviewFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Profila</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">Profilaren izena</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">Erabiltzailearen izena</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">Profil izena sortu</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">Sortu erabiltzaile izena</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Zure kontaktuek eta beste erabiltzaile edo talde batzuek zure profil izena kusi dezakete solasaldi bat hasi edo solasaldi eskaera bat onartzen duzunean. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Ukitu hemen gehiago jakiteko</a>.</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Ebaluatu aplikazio hau</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Aplikazio hau atsegin bazaizu, baloratu guri laguntzeko mesedez.</string>
@@ -799,7 +785,7 @@ Gakoaren elkar-trukeraro mezua jaso da protokoloaren bertsio baliogabe baterako.
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">Ireki Signal azken jakinarazpenak egiaztatzeko.</string>
   <string name="MessageNotifier_contact_message">%1$s%2$s</string>
   <string name="MessageNotifier_unknown_contact_message">Kontaktua</string>
-  <string name="MessageNotifier_reacted_to_your_message">Zure mezuak erreakzioa sortu du: %1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_reacted_to_your_message">Zure mezuak erreakzioa sortu du: %1$s</string> -->
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">Lehenetsia</string>
   <string name="NotificationChannel_calls">Deiak</string>
@@ -1056,10 +1042,9 @@ Inportatu \'SMSBackup and Restorekin\' bateragarria den enkriptatu gabeko babesk
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signalek MMS ezarpenak behar ditu media eta taldeko mezuak banatu ahal izateko zure hari-gabeko hornitzailearen bitartez. Zure gailuak ez dauka informazio hau eskuragarri. Hau batzuetan gertatzen da blokeatuta dauden eta beste konfigurazio murrizgarriak dituzten gailuetan.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Media eta taldeko mezuak bidaltzeko, ukitu \'Ados\' eta osatu behar diren ezarpenak. Zure hornitzailearentzako ezarpenak normalean topa daitezke zure hornitzailearen APNa bilatuz. Bakarrik behin egin beharko duzu hau.</string>
   <!--profile_create_activity-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Geroago ezarri</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">BUKATU</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Nork ikusi dezake informazio hau?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Zure izena</string> -->
+  <string name="CreateProfileActivity_next">Hurrengoa</string>
+  <string name="CreateProfileActivity__username">Erabiltzailearen izena</string>
+  <string name="CreateProfileActivity__create_a_username">Sortu erabiltzaile izena</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Partekatutako media</string>
   <!--recipient_preferences-->
@@ -1490,7 +1475,6 @@ Inportatu \'SMSBackup and Restorekin\' bateragarria den enkriptatu gabeko babesk
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Erregistratzea blokeatzeko aukerak zure telefono-zenbakia baimenik gabe erregistratzeko saiakeretatik babesten du. Aukera hau nahi duzunean desgaitu daiteke Signal-eko pribatutasun-ezarpenetan</string>
   <string name="RegistrationLockDialog_registration_lock">Erregistratze-blokeoa</string>
   <string name="RegistrationLockDialog_enable">Gaitu</string>
-  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">Erregistratzea blokeatzeko PINak 4 digitu izan behar ditu gutxienez.</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">Sartu dituzun bi PINak ez datoz bat.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Errorea zerbitzura konektatzean</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Erregistratzea blokeatzeko PINa desgaitu?</string>
