--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -270,12 +270,9 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Vérifié</string>
   <!--CreateProfileActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Vos renseignements de profil</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Erreur de définition de la photo de profil</string>
   <string name="CreateProfileActivity_problem_setting_profile">Problème de définition du profil</string>
   <string name="CreateProfileActivity_profile_photo">Photo de profil</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">Trop long</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Nom de profil</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Configurez votre profil</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Les profils Signal sont chiffrés de bout en bout et le service Signal n’a jamais accès à ces renseignements.</string>
   <string name="CreateProfileActivity_set_avatar_description">Définir un avatar</string>
@@ -551,17 +548,6 @@
   <string name="PlacePickerActivity_accept_address">Accepter l’adresse</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">La version des services Google Play installée ne fonctionne pas correctement. Veuillez réinstaller les Services Google Play et ressayer.</string>
-  <!--ProfileEditNameFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">Nom de profil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Votre nom de profil peut être vu par vos contacts et par d’autres utilisateurs ou groupes quand vous lancez une conversation ou acceptez une demande de conversation.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Enregistrer</string> -->
-  <!--ProfileEditOverviewFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Profil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">Nom de profil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">Nom d’utilisateur</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">Créer un nom de profil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">Créer un nom d’utilisateur</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Votre profil signal peut être vu par vos contacts et par d’autres utilisateurs ou groupes quand vous lancez une conversation ou acceptez une demande de conversation. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Touchez ici pour en savoir plus</a>.</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Notez cette appli</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Si vous aimez cette appli, veuillez prendre quelques instants pour nous aider la notant.</string>
@@ -799,7 +785,7 @@
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">Ouvrez Signal pour vérifier les notifications récentes.</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
   <string name="MessageNotifier_unknown_contact_message">Contact</string>
-  <string name="MessageNotifier_reacted_to_your_message">A réagi à votre message : %1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_reacted_to_your_message">A réagi à votre message : %1$s</string> -->
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">Valeur par défaut</string>
   <string name="NotificationChannel_calls">Appels</string>
@@ -1056,10 +1042,11 @@
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal exige que les paramètres de messages multimédias remettent les messages multimédias et de groupe en utilisant votre opérateur de réseau mobile. Votre appareil n’offre pas ces renseignements, ce qui arrive parfois pour les appareils verrouillés ou d’autres configurations restrictives.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Pour envoyer des messages multimédias ou de groupe, touchez Valider et remplissez les paramètres demandés. Les paramètres de messages multimédias pour votre opérateur peuvent habituellement être trouvés en cherchant l’APN (nom du point d’accès) de votre opérateur. Vous n’aurez à le faire qu’une seule fois.</string>
   <!--profile_create_activity-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Définir plus tard</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">TERMINER</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Qui peut voir ces renseignements ?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Votre nom</string> -->
+  <string name="CreateProfileActivity_first_name_required">Prénom (requis)</string>
+  <string name="CreateProfileActivity_last_name_optional">Nom de famille (facultatif)</string>
+  <string name="CreateProfileActivity_next">Suivant</string>
+  <string name="CreateProfileActivity__username">Nom d’utilisateur</string>
+  <string name="CreateProfileActivity__create_a_username">Créer un nom d’utilisateur</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Médias partagés</string>
   <!--recipient_preferences-->
@@ -1490,7 +1477,7 @@
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Le blocage de l’inscription aide à protéger votre numéro de téléphone contre les tentatives d’inscription non autorisées. Cette fonction peut être désactivée en tout temps dans vos paramètres de confidentialité de Signal</string>
   <string name="RegistrationLockDialog_registration_lock">Blocage de l’inscription</string>
   <string name="RegistrationLockDialog_enable">Activer</string>
-  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">Le NIP de blocage de l’inscription doit comporter au moins quatre chiffres.</string> -->
+  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_d_digits">Le NIP de blocage de l’inscription doit comporter au moins %d chiffres.</string>
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">Les deux NIP que vous avez saisis ne correspondent pas.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Erreur de connexion au service</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Désactiver le NIP de blocage de l’inscription ?</string>
