--- a/app/src/main/res/values-gu/strings.xml
+++ b/app/src/main/res/values-gu/strings.xml
@@ -270,12 +270,9 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">ચકાસણી</string>
   <!--CreateProfileActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">તમારી પ્રોફાઇલ માહિતી</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">પ્રોફાઇલ ફોટો સેટ કરવામાં ભૂલ</string>
   <string name="CreateProfileActivity_problem_setting_profile">પ્રોફાઇલ ને સેટ કરવામાં સમસ્યા</string>
   <string name="CreateProfileActivity_profile_photo">પ્રોફાઇલ ફોટો</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">ઘણો સમય</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">પ્રોફાઇલ નામ</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">તમારી પ્રોફાઇલ સેટ કરો</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Signal પ્રોફાઇલ્સ એ એન્ડ-ટુ-એન્ડ એન્ક્રિપ્ટેડ હોય છે, અને Signal સેવાની આ માહિતીની એક્સેસ ક્યારેય હોતી નથી.</string>
   <string name="CreateProfileActivity_set_avatar_description">અવતાર સેટ કરો</string>
@@ -550,17 +547,6 @@
   <string name="PlacePickerActivity_accept_address">સરનામું સ્વીકારો</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">તમે ઇન્સ્ટોલ કરેલી Google Play Servicesનું વર્ઝન યોગ્ય રીતે કાર્ય કરી રહ્યું નથી. કૃપા કરીને Google Play Services ફરીથી ઇન્સ્ટોલ કરો અને ફરીથી પ્રયાસ કરો.</string>
-  <!--ProfileEditNameFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">પ્રોફાઇલ નામ</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">જ્યારે તમે સંવાદ શરૂ કરો છો અથવા સંવાદની વિનંતી સ્વીકારો છો ત્યારે તમારું પ્રોફાઇલ નામ તમારા સંપર્કો દ્વારા અને અન્ય વપરાશકર્તાઓ અથવા ગ્રુપ દ્વારા જોઇ શકાય છે.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">સેવ કરો</string> -->
-  <!--ProfileEditOverviewFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">પ્રોફાઇલ</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">પ્રોફાઇલ નામ</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">વપરાશકર્તા નામ</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">પ્રોફાઇલ નામ બનાવો</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">વપરાશકર્તા નામ બનાવો</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">જ્યારે તમે સંવાદ શરૂ કરો છો અથવા સંવાદની વિનંતી સ્વીકારો છો ત્યારે તમારી Signal પ્રોફાઇલ તમારા સંપર્કો દ્વારા અને અન્ય વપરાશકર્તાઓ અથવા ગ્રુપ દ્વારા જોઈ શકાય છે. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">વધુ જાણવા માટે અહીં ટેપ કરો</a>.</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">આ એપ્લિકેશનને રેટ કરો</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">જો તમને આ એપ્લિકેશનનો ઉપયોગ કરવામાં આનંદ આવે છે, તો કૃપા કરીને તેને રેટિંગ આપીને મદદ કરવામાં થોડો સમય કાઢો.</string>
@@ -802,7 +788,7 @@
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">તાજેતરની સૂચનાઓ તપાસવા માટે Signal ખોલો.</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
   <string name="MessageNotifier_unknown_contact_message">સંપર્ક</string>
-  <string name="MessageNotifier_reacted_to_your_message">તમારા મેસેજ પર પ્રતિક્રિયા આપી: %1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_reacted_to_your_message">તમારા મેસેજ પર પ્રતિક્રિયા આપી: %1$s</string> -->
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">ડિફોલ્ટ</string>
   <string name="NotificationChannel_calls">કૉલ્સ</string>
@@ -1059,10 +1045,9 @@
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal ને તમારા વાયરલેસ કેરિયર દ્વારા મીડિયા અને ગ્રુપ મેસેજ પહોંચાડવા માટે MMS સેટિંગ્સ ની જરૂર છે. તમારું ડિવાઇસ આ માહિતીને ઉપલબ્ધ કરતું નથી, જે લૉક કરેલા ડિવાઇસ અને અન્ય પ્રતિબંધિત ગોઠવણીઓ માટે ક્યારેક ક્યારેક સાચું હોય છે.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">મીડિયા અને ગ્રુપ મેસેજ મોકલવા માટે, \'ઓકે\' ને ટેપ કરો અને વિનંતી કરેલી સેટિંગ્સ પૂર્ણ કરો. તમારા કેરીઅર માટેની MMS સેટિંગ્સ સામાન્ય રીતે \'તમારા કેરિયર APN\' શોધીને સ્થિત થઈ શકે છે. તમારે ફક્ત આ એકવાર કરવાની જરૂર પડશે.</string>
   <!--profile_create_activity-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">પછી સેટ કરો</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">સમાપ્ત</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">આ માહિતી કોણ જોઇ શકે છે?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">તમારું નામ</string> -->
+  <string name="CreateProfileActivity_next">આગળ</string>
+  <string name="CreateProfileActivity__username">વપરાશકર્તા નામ</string>
+  <string name="CreateProfileActivity__create_a_username">વપરાશકર્તા નામ બનાવો</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">શેર કરેલ મીડિયા</string>
   <!--recipient_preferences-->
@@ -1492,7 +1477,6 @@
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">રજીસ્ટ્રેશન લૉક તમારા ફોન નંબરને અનધિકૃત રજીસ્ટ્રેશન પ્રયત્નોથી સુરક્ષિત કરવામાં મદદ કરે છે. તમારી Signal ગોપનીયતા સેટિંગ્સ માં આ સુવિધાને કોઈપણ સમયે અક્ષમ કરી શકાય છે</string>
   <string name="RegistrationLockDialog_registration_lock">રજીસ્ટ્રેશન લૉક</string>
   <string name="RegistrationLockDialog_enable">સક્ષમ</string>
-  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">નોંધણી લૉક PIN ઓછામાં ઓછો 4 અંકનો હોવો જોઈએ.</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">તમે દાખલ કરેલા બે PIN મેળ ખાતા નથી.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">સેવાથી કનેક્ટ કરવામાં ભૂલ</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">રજીસ્ટ્રેશન લૉક પિન અક્ષમ કરીએ?</string>
