--- a/app/src/main/res/values-ha/strings.xml
+++ b/app/src/main/res/values-ha/strings.xml
@@ -270,12 +270,9 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Tabbatacce</string>
   <!--CreateProfileActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Bayanan furofayil dinka/ki.</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Kuskure wajen saitin hoton furofayil</string>
   <string name="CreateProfileActivity_problem_setting_profile">As samu matsalar saitin furofayil</string>
   <string name="CreateProfileActivity_profile_photo">Hoton furofayil</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">Yayi tsaho da yawa</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Sunan furofayil</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Saita furofayil</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Furofayil don Signal na amfani da tsari, kuma sabis din Signal bashi da daman samun wannan bayanan.</string>
   <string name="CreateProfileActivity_set_avatar_description">Sa alamar hoto.</string>
@@ -551,17 +548,6 @@
   <string name="PlacePickerActivity_accept_address">Karbi adireshi</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Irin Google Play Services da ka/kika sa a na\'uraka/ki ba daidai yake aiki ba. Sake saka Google Play Services sannan ka/ki kara gwadawa.</string>
-  <!--ProfileEditNameFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">Sunan furofayil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Abokanen sadarwarka/ki ko kuma wasu masu amfani da Signal ko kuma membobin rukunonika/ki zasu iya ganin sunan furofayil dinka idan ka fara hira dasu ko kuba idan ka bada izinin yin hira dasu.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Ajiye</string> -->
-  <!--ProfileEditOverviewFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Furofayil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">Sunan furofayil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">Sunan mai amfani</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">Zabi sunan furofayil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">Kirkiri sunan da ake bukatan amfani da</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Abokanen sadarwarka/ki, sauran masu amfani da Signal da kuma membobin rukunonika/ki zasu iya ganin furofayil dinka na Signal idan ka/kika fara yin hira dasu ko kuma yarda da yin hira dasu. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Taba nan domin karin bayani</a>.</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Yaba wannan manhajar</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Idan ka/kin ji dadin wannan manhajar, dan dauki \'yan mintina ka/kiyi kafa mana taurari.</string>
@@ -806,7 +792,7 @@
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">Bude Signal domin duba sabobbin sanarwa.</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
   <string name="MessageNotifier_unknown_contact_message">Lambar sadarwa</string>
-  <string name="MessageNotifier_reacted_to_your_message">Ya/ta amsa sakonka/ki: %1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_reacted_to_your_message">Ya/ta amsa sakonka/ki: %1$s</string> -->
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">Tanadadde</string>
   <string name="NotificationChannel_calls">Kira</string>
@@ -1063,10 +1049,11 @@
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal na bukatar saitin MMS ya kai sakon midiya da na rukunoni ta ajiyar bayaninka/ki mara waya. Na\'urarka/ki baya yada wannan bayanin, dama ansan wannan hakan yake da kullellen na\'aura wani sa\'in.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Domin tura sakon midiya ko na rukuni, taba \'OK\' ka/ki kammala tambayar saiti da aka turo. Kowa zai iya samun saitin MMS din layinka/ki ta hanyar neman \'your carrier APN\', sau daya tak kake/kike bukatar wannan saitin.</string>
   <!--profile_create_activity-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Saita anjima</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">Gama</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Wa zai iya ganin wannan bayanin?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Sunanka/ki</string> -->
+  <string name="CreateProfileActivity_first_name_required">Sunan farko (ana bukata)</string>
+  <string name="CreateProfileActivity_last_name_optional">Sunan karshe (Ka/kina da zabi)</string>
+  <string name="CreateProfileActivity_next">Na gaba</string>
+  <string name="CreateProfileActivity__username">Sunan mai amfani</string>
+  <string name="CreateProfileActivity__create_a_username">Kirkiri sunan da ake bukatan amfani da</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Midiya da aka tura/turo</string>
   <!--recipient_preferences-->
@@ -1497,7 +1484,7 @@
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Mukullin rijista na taimakawa wajen kare lambar wayarka/ki daga gwajin rijista da ba\'a yarda dashi ba. Za\'a iya nakashe wannan fasalin ko da yaushe a cikin saitin sirri na Signal dinka/ki.</string>
   <string name="RegistrationLockDialog_registration_lock">Mukullin rijista</string>
   <string name="RegistrationLockDialog_enable">Karfafa</string>
-  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">Dole sai lambobin mukullin rijista sun kai 4</string> -->
+  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_d_digits">Dole sai lambobin sirrin rijista sun kai wa\'adi %d .</string>
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">Lambobin sirri da ka/kika shigar basu dace ba</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Kuskeren sadarwa da sabis</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Nakashe lambobin sirrin rijista</string>
