--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -256,12 +256,9 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Terverifikasi</string>
   <!--CreateProfileActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Informasi profil Anda</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Gagal mengatur foto profil</string>
   <string name="CreateProfileActivity_problem_setting_profile">Masalah pengaturan profil</string>
   <string name="CreateProfileActivity_profile_photo">Foto profil</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">Kepanjangan</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Nama Profil</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Siapkan profil Anda</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Profil Signal dienkripsi ujung-ke-ujung, dan layanan Signal tidak pernah memiliki akses ke informasi ini.</string>
   <string name="CreateProfileActivity_set_avatar_description">Pilih avatar</string>
@@ -530,17 +527,6 @@
   <string name="PlacePickerActivity_accept_address">Terima alamat</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Versi dari Google Play Services yang Anda pasang tidak berfungsi dengan benar. Mohon pasang ulang Google Play Services dan coba lagi.</string>
-  <!--ProfileEditNameFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">Nama profil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Nama profil Anda dapat dilihat oleh kontak, pengguna lain, atau anggota grup saat Anda memulai atau menerima undangan percakapan.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Simpan</string> -->
-  <!--ProfileEditOverviewFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Profil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">Nama profil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">Nama Pengguna</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">Buat nama profil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">Buat nama pengguna</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Profil Signal Anda dapat dilihat oleh kontak, pengguna lain, atau anggota grup saat Anda memulai atau menerima undangan percakapan. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Ketuk di sini untuk informasi lebih lanjut</a>.</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Nilai aplikasi ini</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Jika Anda suka menggunakan aplikasi ini, luangkan waktu sejenak untuk membantu kami dengan memberikan nilai pada aplikasi.</string>
@@ -786,7 +772,7 @@ Menerima pesan pertukaran kunci untuk versi protokol yang tidak valid.
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">Buka Signal untuk memeriksa notifikasi terbaru.</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
   <string name="MessageNotifier_unknown_contact_message">Kontak</string>
-  <string name="MessageNotifier_reacted_to_your_message">%1$sorang mengomentari pesan Anda</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_reacted_to_your_message">%1$sorang mengomentari pesan Anda</string> -->
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">Standar</string>
   <string name="NotificationChannel_calls">Panggilan</string>
@@ -1035,10 +1021,9 @@ Menerima pesan pertukaran kunci untuk versi protokol yang tidak valid.
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal memerlukan pengaturan MMS untuk mengirimkan media dan pesan grup melalui jaringan operator. Perangkat Anda tidak dapat menyediakan informasi ini, yang bisa terjadi pada perangkat terkunci dan konfigurasi terbatas lainnya.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Untuk mengirim pesan media dan pesan grup, ketuk \'OK\' dan selesaikan pengaturan yang diminta. Pengaturan MMS untuk operator Anda biasanya dapat ditemukan dengan mencari \'APN operator Anda\'. Anda hanya perlu melakukan ini sekali saja.</string>
   <!--profile_create_activity-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Atur nanti</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">SELESAI</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Siapa yang dapat melihat informasi ini?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Nama anda</string> -->
+  <string name="CreateProfileActivity_next">Berikutnya</string>
+  <string name="CreateProfileActivity__username">Nama Pengguna</string>
+  <string name="CreateProfileActivity__create_a_username">Buat nama pengguna</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Media yang dibagikan</string>
   <!--recipient_preferences-->
@@ -1362,8 +1347,8 @@ Menerima pesan pertukaran kunci untuk versi protokol yang tidak valid.
   <string name="trimmer__old_messages_successfully_deleted">Pesan lama berhasil dihapus</string>
   <!--Insights-->
   <string name="Insights__percent">%</string>
-  <string name="Insights__title">Wawasan</string>
-  <string name="InsightsDashboardFragment__title">Wawasan</string>
+  <string name="Insights__title">Insight</string>
+  <string name="InsightsDashboardFragment__title">Insight</string>
   <string name="InsightsDashboardFragment__signal_protocol_automatically_protected">Protokol Signal melindungi %1$d%% pesan keluar Anda secara otomatis selama %2$dhari terakhir. Percakapan antara pengguna Signal selalu dienkripsi ujung-ke-ujung.</string>
   <string name="InsightsDashboardFragment__boost_your_signal">Perkuat keamanan Signal</string>
   <string name="InsightsDashboardFragment__not_enough_data">Data tidak cukup</string>
@@ -1467,7 +1452,6 @@ Menerima pesan pertukaran kunci untuk versi protokol yang tidak valid.
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Kunci Pendaftaran membantu melindungi nomor telepon Anda dari upaya pendaftaran tanpa izin. Fitur ini dapat ditinjau kembali setiap saat dalam pengaturan privasi Signal</string>
   <string name="RegistrationLockDialog_registration_lock">Kunci Pendaftaran</string>
   <string name="RegistrationLockDialog_enable">Aktifkan</string>
-  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">PIN Kunci Pendaftaran harus minimal 4 digit.</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">Kedua PIN yang Anda masukkan tidak cocok.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Gagal menyambung ke layanan</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Nonaktifkan PIN Kunci Pendaftaran?</string>
