--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -270,12 +270,9 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Verificato</string>
   <!--CreateProfileActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Il tuo profilo</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Errore salvando la foto del profilo</string>
   <string name="CreateProfileActivity_problem_setting_profile">Errore nella configurazione del profilo</string>
   <string name="CreateProfileActivity_profile_photo">Foto del profilo</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">Troppo lungo</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Nome profilo</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Imposta il tuo profilo</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">I profili di Signal sono criptati end-to-end ed il servizio di Signal non ha mai accesso a queste informazioni.</string>
   <string name="CreateProfileActivity_set_avatar_description">Imposta avatar</string>
@@ -550,17 +547,6 @@
   <string name="PlacePickerActivity_accept_address">Accetta indirizzo</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">La versione di Google Play Services installata non funziona correttamente. Reinstallalo e riprova.</string>
-  <!--ProfileEditNameFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">Nome profilo</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Il tuo nome profilo può essere visto dai tuoi contatti o da altri utenti o gruppi quando inizi una conversazione o accetti una richiesta di conversazione.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Salva</string> -->
-  <!--ProfileEditOverviewFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Profilo</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">Nome profilo</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">Nome utente</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">Crea un nome profilo</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">Crea un nome utente</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Il tuo profilo Signal può essere visto dai tuoi contatti o da altri utenti o gruppi quando inizi una conversazione o accetti una richiesta di conversazione. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Tocca qui per saperne di più</a>.</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Vota questa app!</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Se quest\'applicazione ti piace, ti preghiamo di aiutarci votandola.</string>
@@ -804,7 +790,7 @@ Ricevuto un messaggio di scambio chiavi per una versione di protocollo non valid
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">Apri Signal per controllare le notifiche recenti.</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
   <string name="MessageNotifier_unknown_contact_message">Contatto</string>
-  <string name="MessageNotifier_reacted_to_your_message">Reagito al tuo messaggio: %1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_reacted_to_your_message">Reagito al tuo messaggio: %1$s</string> -->
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">Predefinito</string>
   <string name="NotificationChannel_calls">Chiamate</string>
@@ -1061,10 +1047,11 @@ Ricevuto un messaggio di scambio chiavi per una versione di protocollo non valid
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal ha bisogno delle impostazioni degli MMS per poter inviare messaggi multimediali e di gruppo con il tuo operatore. Il tuo dispositivo non fornisce queste impostazioni, probabilmente perché ha un operatore bloccato o altre configurazioni restrittive.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Per inviare media e messaggi di gruppo, tocca \'OK\' e completa le impostazioni richieste. Le impostazioni MMS per il tuo operatore possono essere trovate cercando per \'your carrier APN\'. Dovrai fare questo solo una volta.</string>
   <!--profile_create_activity-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Impostalo più tardi</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">FINE</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Chi può vedere queste informazioni?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Il tuo nome</string> -->
+  <string name="CreateProfileActivity_first_name_required">Nome (obbligatorio)</string>
+  <string name="CreateProfileActivity_last_name_optional">Cognome (facoltativo)</string>
+  <string name="CreateProfileActivity_next">Avanti</string>
+  <string name="CreateProfileActivity__username">Nome utente</string>
+  <string name="CreateProfileActivity__create_a_username">Crea un nome utente</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Media condivisi</string>
   <!--recipient_preferences-->
@@ -1495,7 +1482,7 @@ Ricevuto un messaggio di scambio chiavi per una versione di protocollo non valid
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Il blocco registrazione aiuta a proteggere il tuo numero di telefono da tentativi non autorizzati di registrazione. Questa funzionalità può essere disabilitata in ogni momento dalle impostazioni Privacy di Signal</string>
   <string name="RegistrationLockDialog_registration_lock">Blocco registrazione</string>
   <string name="RegistrationLockDialog_enable">Abilita</string>
-  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">Il PIN di blocco registrazione deve essere almeno di 4 cifre.</string> -->
+  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_d_digits">Il PIN di blocco registrazione deve essere almeno di %d cifre.</string>
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">I due PIN inseriti non corrispondono.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Errore durante la connessione al servizio</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Disabilitare PIN di blocco registrazione?</string>
