--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -298,12 +298,9 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">מוודא</string>
   <!--CreateProfileActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">מידע הפרופיל שלך</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">שגיאה בהגדרת תצלום פרופיל</string>
   <string name="CreateProfileActivity_problem_setting_profile">בעיה בהגדרת פרופיל</string>
   <string name="CreateProfileActivity_profile_photo">תצלום פרופיל</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">ארוך מדי</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">שם פרופיל</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">הגדר את הפרופיל שלך</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">פרופילי Signal מוצפנים מקצה לקצה, ולשירות Signal אין אף פעם גישה אל מידע זה.</string>
   <string name="CreateProfileActivity_set_avatar_description">הגדר יצגן</string>
@@ -593,17 +590,6 @@
   <string name="PlacePickerActivity_accept_address">קבל כתובת</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">הגרסה של שירותי Google Play המותקנת אינה מתפקדת כראוי. אנא התקן מחדש את שירותי Google Play ונסה שוב.</string>
-  <!--ProfileEditNameFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">שם פרופיל</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">שם הפרופיל שלך יכול להיראות ע״י אנשי הקשר שלך וע״י משתמשים אחרים או קבוצות אחרות כאשר אתה יוזם שיחה או מקבל בקשת שיחה.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">שמור</string> -->
-  <!--ProfileEditOverviewFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">פרופיל</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">שם פרופיל</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">שם משתמש</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">צור שם פרופיל</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">צור שם משתמש</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">פרופיל Signal שלך יכול להיראות ע״י אנשי הקשר שלך וע״י משתמשים אחרים או קבוצות אחרות כאשר אתה יוזם שיחה או מקבל בקשת שיחה. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">הקש כאן כדי ללמוד עוד</a>.</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">דרג יישום זה</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">אם אתה נהנה להשתמש ביישום זה, אנא הקדש רגע כדי לעזור לנו ע״י דירוג שלו.</string>
@@ -852,7 +838,7 @@
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">פתח את Signal כדי לבדוק התראות אחרונות.</string>
   <string name="MessageNotifier_contact_message">%1$s%2$s</string>
   <string name="MessageNotifier_unknown_contact_message">איש קשר</string>
-  <string name="MessageNotifier_reacted_to_your_message">הגיב אל ההודעה שלך: %1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_reacted_to_your_message">הגיב אל ההודעה שלך: %1$s</string> -->
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">ברירת מחדל</string>
   <string name="NotificationChannel_calls">שיחות</string>
@@ -1125,10 +1111,11 @@
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal דורש הגדרות MMS כדי למסור הודעות מדיה והודעות קבוצתיות דרך מפעיל התקשורת שלך. המכשיר שלך לא הופך מידע זה לזמין, מה שלעיתים נכון לגבי מכשירים נעולים ותצורות מגבילות אחרות.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">כדי לשלוח מדיה והודעות קבוצתיות, הקש על \'אישור\' והשלם את ההגדרות המבוקשות. הגדרות ה־MMS עבור המפעיל שלך יכולות בד\"כ להימצא ע\"י חיפוש אחר \'מפעיל ה־APN שלך\'. תצטרך לעשות זאת רק פעם אחת.</string>
   <!--profile_create_activity-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">הגדר מאוחר יותר</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">סיים</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">מי יכול לראות מידע זה?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">שמך</string> -->
+  <string name="CreateProfileActivity_first_name_required">שם פרטי (חובה)</string>
+  <string name="CreateProfileActivity_last_name_optional">שם משפחה (לא חובה)</string>
+  <string name="CreateProfileActivity_next">הבא</string>
+  <string name="CreateProfileActivity__username">שם משתמש</string>
+  <string name="CreateProfileActivity__create_a_username">צור שם משתמש</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">מדיה משותפת</string>
   <!--recipient_preferences-->
@@ -1563,7 +1550,7 @@
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">נעילת הרשמה עוזרת להגן על מספר הטלפון שלך מפני ניסיונות הרשמה בלתי מורשים. מאפיין זה יכול להיות מושבת בכל זמן שהוא בהגדרות הַפְּרָטִיוּת של Signal</string>
   <string name="RegistrationLockDialog_registration_lock">נעילת הרשמה</string>
   <string name="RegistrationLockDialog_enable">אפשר</string>
-  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">PIN נעילת ההרשמה חייב להיות לפחות 4 ספרות.</string> -->
+  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_d_digits">הקוד הסודי להרשמה חייב לכלול ספרה %d לפחות</string>
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">שני מספרי ה־PIN שהכנסת אינם תואמים.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">שגיאה בהתחברות אל השירות</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">להשבית PIN נעילת הרשמה?</string>
