--- a/app/src/main/res/values-jv/strings.xml
+++ b/app/src/main/res/values-jv/strings.xml
@@ -256,12 +256,9 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Dipunverifikasiken</string>
   <!--CreateProfileActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Informasi profil sampeyan</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Enten kalepatan kala masang foto profil</string>
   <string name="CreateProfileActivity_problem_setting_profile">Enten kalepatan kala ngatur profil</string>
   <string name="CreateProfileActivity_profile_photo">Foto profil</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">Kepanjangen</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Nami Profil</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Aturaken profil sampeyan</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Profil Signal dipunenkripsi end-to-end, dadosipun ladosan Signal mboten saged mbikak informasi kasebut.</string>
   <string name="CreateProfileActivity_set_avatar_description">Pasang avatar</string>
@@ -530,17 +527,6 @@
   <string name="PlacePickerActivity_accept_address">Tampi alamat</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Versi Google Play Service ingkang dipunpasang mboten berfungsi sacara leres. Pasangaken malih Google Play Services lan cobi malih.</string>
-  <!--ProfileEditNameFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">Nami profil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Kontak sampeyan lan grup utawi panggina benten ingkang sampeyan ajak ngobrol utawi sampeyan tampi panedhanipun kagem ngobrol saged ningali nami profilipun sampeyan.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Simpen</string> -->
-  <!--ProfileEditOverviewFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Profil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">Nami profil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">Nami panggina</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">Damelaken nami profil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">Damelaken nami panggina</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Kontak sampeyan lan grup utawi panggina benten ingkang sampeyan ajak ngobrol utawi sampeyan tampi panedhanipun kagem ngobrol saged ningali Profili Signal sampeyan. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Tutul kagem maos langkungipun</a>.</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Damelaken peringkat kagem aplikasi niki</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Menawi sampeyan remen kagem aplikasi niki, damelaken peringkat.</string>
@@ -786,7 +772,7 @@
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">Bikak Signal kagem mriksa prungon paling enggal.</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
   <string name="MessageNotifier_unknown_contact_message">Kontak</string>
-  <string name="MessageNotifier_reacted_to_your_message">Ingkang ngewangsuli pesaninpun sampeyan: %1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_reacted_to_your_message">Ingkang ngewangsuli pesaninpun sampeyan: %1$s</string> -->
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">Default</string>
   <string name="NotificationChannel_calls">Telepon</string>
@@ -1035,10 +1021,11 @@
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal betah panatanan MMS kagem ngirimaken pesan grup lan media ngliwati pirantos tanpa kabel. Pirantos sampeyan mboten bakal ngedadosaken informasi niki kagem umum, ingkang biyasanipun kedadosan kagem pirantos ingkang dikunci lan konfigurasi ingkang ngewatesi bentenipun.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Kagem ngirimaken pesan grup lan media, tutul  \'Oke\' lan rampungaken panatanan ingkang dipuntedha. Panatanan MMS kagem operator sampeyan biyasanipun saged dipanggih kagem madosi \'APN operatoripun sampeyan\'. Sampeyan bakal betah numindakaken prakawis niki pisan mawon.</string>
   <!--profile_create_activity-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Atur mangke</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">RAMPUNG</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Sinten mawon ingkang saged ningali informasi niki?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Naminipun sampeyan</string> -->
+  <string name="CreateProfileActivity_first_name_required">Nami ngajeng (wajib)</string>
+  <string name="CreateProfileActivity_last_name_optional">Nami wingking (mboten wajib)</string>
+  <string name="CreateProfileActivity_next">Salajengipun</string>
+  <string name="CreateProfileActivity__username">Nami panggina</string>
+  <string name="CreateProfileActivity__create_a_username">Damelaken nami panggina</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Media ingkang dipununjukaken</string>
   <!--recipient_preferences-->
@@ -1467,7 +1454,7 @@
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Kunci Pendaftaran mbiantu nglindhungi nomer telepon sampeyan saking upaya pendaftaran ingkang mboten sah. Fitur niki saged dinonaktifaken kapan mawon saking panatanan privasi Signal</string>
   <string name="RegistrationLockDialog_registration_lock">Kunci Pendaftaran</string>
   <string name="RegistrationLockDialog_enable">Aktifaken</string>
-  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">PIN Kunci Pendaftaran mboten saged kirang saking 4 digit.</string> -->
+  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_d_digits">PIN Kunci Pendaftaran betah paling sekedhik %d digit.</string>
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">Kalih PIN ingkang dipunserataken mboten gathuk.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Enten kalepatan kala nyambetaken kaliyan ladosan</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Nonaktifaken PIN Kunci Pendaftaran?</string>
