--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -232,12 +232,9 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">검증됨</string>
   <!--CreateProfileActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">내 프로필</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">프로필 사진 설정 중 오류 발생</string>
   <string name="CreateProfileActivity_problem_setting_profile">프로필 설정 중 오류 발생</string>
   <string name="CreateProfileActivity_profile_photo">프로필 사진</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">너무 깁니다</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">프로필 이름</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">프로필을 설정하세요</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Signal 프로필은 단대단 암호화가 적용되며, Signal 서비스는 해당 정보에 접근할 수 없습니다.</string>
   <!--CustomDefaultPreference-->
@@ -461,9 +458,6 @@
   <string name="PlacePickerActivity_title">지도</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">설치된 Google Play 서비스 버전은 제대로 작동하지 않습니다. Google Play 서비스를 재설치 하고 다시 시도해 주세요.</string>
-  <!--ProfileEditNameFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">저장</string> -->
-  <!--ProfileEditOverviewFragment-->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">앱 평가</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">앱이 마음에 들면 평가해 주시면 좋겠습니다.</string>
@@ -907,10 +901,7 @@
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">이동통신사를 통해 멀티미디어 및 그룹 메시지를 전송하기 위해 MMS 설정 정보가 필요합니다. 기기에서 이 정보가 제공되지 않습니다. 참고: SIM락이 걸려 있거나 다른 방법으로 제한된 기기에서는 가끔 그런 경우가 발생할 수 있습니다.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">멀티미디어 및 그룹 메시지를 보내려면 확인을 터치하여 한 번만 설정해야 합니다. 이동통신사의 MMS 설정 정보를 찾으려면 \'이동통신사 이름 APN\'을 검색하세요.</string>
   <!--profile_create_activity-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">나중에 설정</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">완료</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">이 정보는 누가 볼 수 있나요?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">내 이름</string> -->
+  <string name="CreateProfileActivity_next">다음</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">공유된 미디어</string>
   <!--recipient_preferences-->
@@ -1305,7 +1296,6 @@
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">등록 잠금은 이 휴대전화 번호를 비인가 등록 시도에서 보호할 수 있습니다. 이 기능은 Signal 개인정보 보호 설정에서 언제든지 켜고 끌 수 있습니다.</string>
   <string name="RegistrationLockDialog_registration_lock">등록 잠금</string>
   <string name="RegistrationLockDialog_enable">켜기</string>
-  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">등록 잠금 번호는 4글자 이상이어야 합니다.</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">입력한 두 번호가 일치하지 않습니다.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">서비스에 연결 중 오류 발생</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">등록 잠금 번호를 해제하시겠습니까?</string>
