--- a/app/src/main/res/values-lt/strings.xml
+++ b/app/src/main/res/values-lt/strings.xml
@@ -298,12 +298,9 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Patvirtinta(-s)</string>
   <!--CreateProfileActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Jūsų profilio informacija</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Klaida, nustatant profilio nuotrauką</string>
   <string name="CreateProfileActivity_problem_setting_profile">Problemos, nustatant profilį</string>
   <string name="CreateProfileActivity_profile_photo">Profilio nuotrauka</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">Per ilgas</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Profilio vardas</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Nusistatykite savo profilį</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Signal profiliai yra užšifruoti ištisiniu būdu, o Signal paslauga niekada neturi prieigos prie šios informacijos.</string>
   <string name="CreateProfileActivity_set_avatar_description">Nustatyti avatarą</string>
@@ -585,18 +582,6 @@
   <string name="PlacePickerActivity_accept_address">Priimti adresą</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Jūsų turima įdiegta „Google Play“ paslaugų versija nefunkcionuoja tinkamai. Prašome iš naujo įdiegti „Google Play“ paslaugas ir bandyti dar kartą.</string>
-  <!--ProfileEditNameFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">Profilio pavadinimas</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Jūsų profilio vardas gali būti matomas jūsų kontaktų ir kitų žmonių ar grupių, kai jūs inicijuojate pokalbį ar priėmate pakalbio pakvietimą</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Įrašyti</string> -->
-  <!--ProfileEditOverviewFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Profilis</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">Profilio pavadinimas</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">Naudotojo vardas</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">Sukurti profilio pavadinimą</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">Sukurti naudotojo vardą</string> -->
-  <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Jūsų profilio vardas gali būti matomas jūsų kontaktų ir kitų žmonių ar grupių, kai jūs inicijuojate pokalbį ar priėmate pakalbio pakvietimą.
-<a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Sauskite čia, kad sužinotumėte daugiau</a></string>
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Įvertinkite šią programėlę</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Jeigu jūs mėgaujatės naudodamiesi šia programėle, skirkite minutėlę mums padėti ir įvertinkite ją.</string>
@@ -845,7 +830,7 @@
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">Atverkite Signal, norėdami patikrinti paskiausius pranešimus.</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
   <string name="MessageNotifier_unknown_contact_message">Adresatas</string>
-  <string name="MessageNotifier_reacted_to_your_message">%1$s sureagavo į jūsų žinutę</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_reacted_to_your_message">%1$s sureagavo į jūsų žinutę</string> -->
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">Numatytoji</string>
   <string name="NotificationChannel_calls">Skambučiai</string>
@@ -1118,10 +1103,11 @@
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Tam, kad pristatytų mediją ir grupės žinutes per jūsų belaidį tiekėją, Signal reikalauja MMS nustatymų. Jūsų įrenginys nepadaro šios informacijos prieinamos, kas, dažniausiai, pasitvirtina užrakintiems įrenginiams ir ribotoms konfigūracijoms.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Norėdami siųsti mediją ir grupės žinutes, bakstelėkite \"Gerai\" ir užbaikite užklaustus nustatymus. Įprastai, jūsų tiekėjo MMS nustatymus galima rasti, ieškant \"jūsų tiekėjas APN\". Jums reikės tai atlikti tik vieną kartą.</string>
   <!--profile_create_activity-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Nustatyti vėliau</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">UŽBAIGTI</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Kas gali matyti šią informaciją?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Jūsų vardas</string> -->
+  <string name="CreateProfileActivity_first_name_required">Vardas (būtinas)</string>
+  <string name="CreateProfileActivity_last_name_optional">Pavardė (nebūtina)</string>
+  <string name="CreateProfileActivity_next">Kitas</string>
+  <string name="CreateProfileActivity__username">Naudotojo vardas</string>
+  <string name="CreateProfileActivity__create_a_username">Sukurti naudotojo vardą</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Bendrinama medija</string>
   <!--recipient_preferences-->
@@ -1552,7 +1538,6 @@
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Registracijos užraktas padeda apsaugoti jūsų telefono numerį nuo neteisėtų registracijos bandymų. Ši ypatybė bet kuriuo metu gali būti išjungta jūsų Signal privatumo nustatymuose.</string>
   <string name="RegistrationLockDialog_registration_lock">Registracijos užraktas</string>
   <string name="RegistrationLockDialog_enable">Įjungti</string>
-  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">Registracijos PIN privalo būti bent 4 skaitmenų.</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">Du įvesti PIN kodai nesutampa.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Klaida, jungiantis prie paslaugos</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Išjungti Registracijos užrakto PIN?</string>
