--- a/app/src/main/res/values-lv/strings.xml
+++ b/app/src/main/res/values-lv/strings.xml
@@ -284,12 +284,9 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Pārbaudīts</string>
   <!--CreateProfileActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Jūsu profila info</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Kļūda iestatot profila attēlu</string>
   <string name="CreateProfileActivity_problem_setting_profile">Problēma iestatot profilu</string>
   <string name="CreateProfileActivity_profile_photo">Profila attēls</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">Pārāk garš</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Profila Nosaukums</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Iestatiet savu profilu</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Signal profili ir šifrēti (end-to-end) tā, ka Signal servisam nav pieeja šij informācijai. </string>
   <string name="CreateProfileActivity_set_avatar_description">Iestatīt ikonu</string>
@@ -534,9 +531,6 @@
   <string name="PlacePickerActivity_accept_address">Pieņemt adresi</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Jūsu Google Play Services instalētā versija nefunkcionē pareizi. Lūdzu pārinstalējiet Google Play Services un mēģiniet vēlreiz.</string>
-  <!--ProfileEditNameFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Saglabāt</string> -->
-  <!--ProfileEditOverviewFragment-->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Novērtējiet šo lietotni</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Ja jums patīk izmantot šo programmu, lūdzu, palīdziet mums, veltot īsu brīdi, lai to novērtētu.</string>
@@ -1013,10 +1007,7 @@ Saņemts atslēgas apmaiņas ziņojums par nederīgu protokola versiju. </string
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal ir nepieciešami MMS iestatījumi, lai nogādātu mēdija un grupu ziņas caur operatora tīklu. Jūsu ierīce nesniedz šādu informāciju, kas ir reizēm taisnība operatoru slēgtām ierīcēm un citām liedzošām konfigurācijām.  </string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Lai nosūtītu multivides un grupas ziņas, spiediet \'OK\' un izpildiet pieprasītos uzstādījumus. Jūsu mobilo sakaru operatora MMS iestatījumus parasti var atrast, meklējot “jūsu pakalpojumu sniedzēja APN”. Jums tas būs jādara tikai vienreiz.</string>
   <!--profile_create_activity-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Iestatīt vēlāk</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">PABEIGT</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Kas var redzēt šo informāciju?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Jūsu vārds</string> -->
+  <string name="CreateProfileActivity_next">Tālāk</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Koplietota multivide</string>
   <!--recipient_preferences-->
@@ -1414,7 +1405,6 @@ Saņemts atslēgas apmaiņas ziņojums par nederīgu protokola versiju. </string
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Reģistrācijas Bloķēšana palīdz aizsargāt tālruņa numuru pret nesankcionētiem reģistrācijas mēģinājumiem. Šo līdzekli Signal privātuma iestatījumos var atspējot jebkurā laikā</string>
   <string name="RegistrationLockDialog_registration_lock">Reģistrācijas Bloķēšana</string>
   <string name="RegistrationLockDialog_enable">Iespējot</string>
-  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">Reģistrācijas Bloķēšanas PIN jābūt vismaz 4 cipariem.</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">Divi ievadītie PIN nesakrīt.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Kļūda, savienojoties ar pakalpojumu</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Vai atspējot Reģistrācijas Bloķēšanas PIN?</string>
