--- a/app/src/main/res/values-mr/strings.xml
+++ b/app/src/main/res/values-mr/strings.xml
@@ -270,12 +270,9 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">सत्यापित</string>
   <!--CreateProfileActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">आपली प्रोफाईल माहिती</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">प्रोफाईल फोटो सेट करण्यात त्रुटी</string>
   <string name="CreateProfileActivity_problem_setting_profile">प्रोफाईल सेट करण्यात समस्या</string>
   <string name="CreateProfileActivity_profile_photo">प्रोफाईल फोटो</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">खूप लांब</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">प्रोफाईल नाव</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">आपली प्रोफाईल सेट अप करा</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Signal प्रोफाईल एंड-टू-एंड एन्क्रिप्टेड असतात, आणि Signal सेवेला या माहितीचा अॅक्सेस कधीही नसतो.</string>
   <string name="CreateProfileActivity_set_avatar_description">अवतार सेट करा</string>
@@ -551,17 +548,6 @@
   <string name="PlacePickerActivity_accept_address">पत्ता स्वीकारा</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">आपण स्थापन केलेली Google प्ले सेवेची आवृत्ती व्यवस्थित कार्य करत नाही. कृपया Google प्ले सेवा पुन्हा स्थापन करा आणि पुन्हा प्रयत्न करा.</string>
-  <!--ProfileEditNameFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">प्रोफाईल नाव</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">आपला प्रोफाईल नाव  आपल्या संपर्कांद्वारे आणि इतर वापरकर्ते किंवा गट जे संभाषण प्रारंभ करतात किंवा संभाषण विनंती स्वीकारतात त्यांच्याद्वारे पाहिले जाऊ शकतात. </string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">जतन करा</string> -->
-  <!--ProfileEditOverviewFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">प्रोफाईल</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">प्रोफाईल नाव</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">वापरकर्तानाव</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">प्रोफाईल नाव तयार करा</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">एक वापरकर्तानाव तयार करा</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">आपले Signal प्रोफाईल नाव आपल्या संपर्कांद्वारे आणि इतर वापरकर्ते किंवा गट जे संभाषण प्रारंभ करतात किंवा संभाषण विनंती स्वीकारतात त्यांच्याद्वारे पाहिले जाऊ शकतात. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">अधिक जाणून घेण्यासाठी येथे टॅप करा</a>.</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">ह्या अॅपला रेट करा</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">जर आपल्याला हा अॅप वापरणे आवडत असेल, तर कृपया एक क्षण काढून आम्हाला रेट करून आमची मदत करा.</string>
@@ -805,7 +791,7 @@
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">अलीकडील सूचनांसाठी Signal उघडा.</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
   <string name="MessageNotifier_unknown_contact_message">संपर्क</string>
-  <string name="MessageNotifier_reacted_to_your_message">आपल्या संदेशाला प्रतिसाद दिला: %1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_reacted_to_your_message">आपल्या संदेशाला प्रतिसाद दिला: %1$s</string> -->
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">पूर्वनिर्धारित</string>
   <string name="NotificationChannel_calls">कॉल</string>
@@ -1062,10 +1048,9 @@
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">आपल्या वायरलेस वाहकाद्वारे मिडिया आणि गट संदेश पोहोचविण्यासाठी Signal ला MMS सेटिंगची आवश्यकता असते. आपला डिव्हाईस ही माहिती उपलब्ध करून देत नाही, जे लॉक असलेल्या डिव्हाईस करिता आणि इतर प्रतिबंधक कॉन्फिगरेशन यांकरिता कधी कधी खरे असते.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">मिडिया आणि गट संदेश पाठविण्यासाठी, \'ठीक\' टॅप करा आणि विनंती केलेल्या सेटिंग पूर्ण करा. आपल्या वाहकासाठीच्या MMS सेटिंग सामान्यपणे \'आपला वाहक APN\' शोधून सापडू शकते. आपल्याला हे फक्त एकदा करावे लागेल.</string>
   <!--profile_create_activity-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">नंतर सेट करा</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">संपवा</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">ही माहिती कोण बघू शकतो?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">आपले नाव</string> -->
+  <string name="CreateProfileActivity_next">पुढे</string>
+  <string name="CreateProfileActivity__username">वापरकर्तानाव</string>
+  <string name="CreateProfileActivity__create_a_username">एक वापरकर्तानाव तयार करा</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">सामायिक केलेली मिडिया</string>
   <!--recipient_preferences-->
@@ -1496,7 +1481,6 @@
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">नोंदणी लॉक आपल्या फोन नंबरला अनाधिकृत नोंदणी प्रयत्नांपासून संरक्षित करण्यास मदत करते. हे वैशिष्ट्य आपल्या Signal गोपनीयता सेटिंग मध्ये कधीही अक्षम केले जाऊ शकते</string>
   <string name="RegistrationLockDialog_registration_lock">नोंदणी लॉक</string>
   <string name="RegistrationLockDialog_enable">सक्षम करा</string>
-  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">नोंदणी लॉक PIN किमान 4 अंकी असायला हवे.</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">आपण प्रविष्ट केलेले दोन PIN जुळत नाहीत.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">सेवेसोबत कनेक्ट करण्यात त्रुटी</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">नोंदणी लॉक PIN अक्षम करायचे?</string>
