--- a/app/src/main/res/values-nn/strings.xml
+++ b/app/src/main/res/values-nn/strings.xml
@@ -270,12 +270,9 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Godkjent</string>
   <!--CreateProfileActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Din profilinfo</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Klarte ikkje endra profilbildet</string>
   <string name="CreateProfileActivity_problem_setting_profile">Klarte ikkje endra profilen</string>
   <string name="CreateProfileActivity_profile_photo">Profilbilde</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">For langt</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Profilnamn</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Lag profilen din</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Signal-profilar er krypterte ende-til-ende, og Signal-tenesta har aldri tilgang til denne informasjonen.</string>
   <string name="CreateProfileActivity_set_avatar_description">Vel avatar</string>
@@ -550,17 +547,6 @@
   <string name="PlacePickerActivity_accept_address">Godta adresse</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Versjonen av Google Play-tenester som er installert på denne eininga fungerer ikkje skikkeleg. Installer Google Play-tenester på nytt og prøv igjen.</string>
-  <!--ProfileEditNameFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">Profilnamn</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Profilnamnet ditt er synleg for dine kontaktar og for andre brukarar eller grupper der du startar ei samtale eller tek i mot ein samtale.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Lagra</string> -->
-  <!--ProfileEditOverviewFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Profil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">Profilnamn</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">Brukarnamn</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">Lag eit profilnamn</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">Lag eit brukarnamn</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Signalprofilen din er synleg for dine kontaktar og for andre brukarar eller grupper der du startar ei samtale eller tek i mot ein samtale. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Trykk her for å læra meir</a>.</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Vurder dette programmet</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Viss du liker dette programmet, vil vi gjerne at du hjelper oss ved å gje vurderinga di.</string>
@@ -805,7 +791,7 @@ Mottok nøkkelutvekslingsmelding for ugyldig protokollversjon.</string>
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">Opna Signal for å sjekka nye varsel</string>
   <string name="MessageNotifier_contact_message">%1$s%2$s</string>
   <string name="MessageNotifier_unknown_contact_message">Kontakt</string>
-  <string name="MessageNotifier_reacted_to_your_message">Reagerte på meldinga di: %1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_reacted_to_your_message">Reagerte på meldinga di: %1$s</string> -->
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">Forvald</string>
   <string name="NotificationChannel_calls">Samtalar</string>
@@ -1062,10 +1048,9 @@ Mottok nøkkelutvekslingsmelding for ugyldig protokollversjon.</string>
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal krev MMS-oppsett for å levera media og gruppemeldingar via mobilnett. Eininga di gjer ikkje ikkje denne informasjonen tilgjengeleg. Dette er vanleg på einingar med restriktive oppsett.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Trykk «OK» og følg rettleiinga viss du vil senda medie- og gruppemeldingar. Du finn vanlegvis MMS-oppsettet for operatøren din ved å søkja på nettet etter «operatøren din APN». Du treng berre å gjera dette éin gong.</string>
   <!--profile_create_activity-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Endra seinare</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">FULLFØR</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Kven kan sjå denne informasjonen?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Namnet ditt</string> -->
+  <string name="CreateProfileActivity_next">Neste</string>
+  <string name="CreateProfileActivity__username">Brukarnamn</string>
+  <string name="CreateProfileActivity__create_a_username">Lag eit brukarnamn</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Delt media</string>
   <!--recipient_preferences-->
@@ -1500,7 +1485,6 @@ Du er à jour!</string>
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Ein registreringslås hjelper å verna telefonnummeret ditt frå uautoriserte registreringsforsøk. Du kan skru av denne funksjonen når som helst frå personverninnstillingane i Signal</string>
   <string name="RegistrationLockDialog_registration_lock">Registreringslås</string>
   <string name="RegistrationLockDialog_enable">Skru på</string>
-  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">PIN-koden for registreringslås må ha minst 4 siffer.</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">Dei to PIN-kodane du skreiv inn er ulike.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Klarte ikkje kopla til tenesta</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Skru av PIN-kode for registreringslås?</string>
