--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -298,12 +298,9 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Zweryfikowano</string>
   <!--CreateProfileActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Twój profil</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Błąd ustawiania zdjęcia profilowego</string>
   <string name="CreateProfileActivity_problem_setting_profile">Problem ustawiania profilu</string>
   <string name="CreateProfileActivity_profile_photo">Zdjęcie profilowe</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">Zbyt długie</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Nazwa profilu</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Ustaw swój profil</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Profile Signal są szyfrowane end-to-end, a Signal nie ma dostępu do tych informacji.</string>
   <string name="CreateProfileActivity_set_avatar_description">Ustaw awatar</string>
@@ -592,17 +589,6 @@
   <string name="PlacePickerActivity_accept_address">Zaakceptuj adres</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Wersja Google Play Services którą masz zainstalowaną nie funkcjonuje poprawnie. Proszę przeinstaluj tę aplikację ponownie i spróbuj ponownie.</string>
-  <!--ProfileEditNameFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">Nazwa profilu</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Twoja nazwa profilu będzie widoczna dla Twoich kontaktów oraz innych użytkowników lub grup, gdy zapoczątkujesz konwersacje lub zaakceptujesz prośbę o udostępnienie.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Zapisz</string> -->
-  <!--ProfileEditOverviewFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Profil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">Nazwa profilu</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">Nazwa użytkownika</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">Utwórz nazwę profilu</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">Utwórz nazwę użytkownika</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Twój profil Signal będzie widoczny dla Twoich kontaktów oraz innych użytkowników lub grup, gdy zapoczątkujesz konwersacje lub zaakceptujesz prośbę o udostępnienie. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Dotknij tutaj, aby dowiedzieć się więcej</a>.</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Oceń tę aplikację</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Jeśli lubisz używać tę aplikację, to prosimy, pomóż nam i oceń ją.</string>
@@ -844,7 +830,7 @@ Otrzymano wiadomość wymiany klucz dla niepoprawnej wersji protokołu.</string>
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">Otwórz Signal, aby zobaczyć najnowsze powiadomienia.</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
   <string name="MessageNotifier_unknown_contact_message">Kontakt</string>
-  <string name="MessageNotifier_reacted_to_your_message">Zareagował(a) na Twoją wiadomość: %1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_reacted_to_your_message">Zareagował(a) na Twoją wiadomość: %1$s</string> -->
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">Domyślny</string>
   <string name="NotificationChannel_calls">Połączenia</string>
@@ -1117,10 +1103,11 @@ Otrzymano wiadomość wymiany klucz dla niepoprawnej wersji protokołu.</string>
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal wymaga ustawień MMS w celu dostarczenia wiadomości multimedialnych oraz wiadomości grupowych za pośrednictwem Twojego operatora. Twoje urządzenie nie udostępnia tych informacji. Może to być spowodowane pewnymi restrykcyjnymi konfiguracyjnymi w telefonie.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Aby wysyłać wiadomości multimedialne i grupowe, naciśnij „OK” i zmień żądane ustawienia. Ustawienia MMS twojego operatora zwykle można odnaleźć wyszukując „APN mojego operatora”. Ta operacja musi być ukończona tylko raz.</string>
   <!--profile_create_activity-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Ustaw później</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">ZAKOŃCZ</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Kto może zobaczyć te informacje?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Twoje imię</string> -->
+  <string name="CreateProfileActivity_first_name_required">Imię (wymagane)</string>
+  <string name="CreateProfileActivity_last_name_optional">Nazwisko (opcjonalne)</string>
+  <string name="CreateProfileActivity_next">Dalej</string>
+  <string name="CreateProfileActivity__username">Nazwa użytkownika</string>
+  <string name="CreateProfileActivity__create_a_username">Utwórz nazwę użytkownika</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Udostępnione multimedia</string>
   <!--recipient_preferences-->
@@ -1555,7 +1542,7 @@ Otrzymano wiadomość wymiany klucz dla niepoprawnej wersji protokołu.</string>
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Blokada rejestracji pomaga chronić Twój numer telefonu przed nieautoryzowanymi próbami rejestracji. Ta funkcja może być w dowolnym momencie wyłączona w ustawieniach prywatności Signal</string>
   <string name="RegistrationLockDialog_registration_lock">Blokada rejestracji</string>
   <string name="RegistrationLockDialog_enable">Włącz</string>
-  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">Kod PIN blokady rejestracji musi składać się z co najmniej 4 cyfr.</string> -->
+  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_d_digits">PIN blokady rejestracji musi składać się z co najmniej %d cyfr.</string>
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">Wprowadzone kody PIN nie pasują do siebie.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Błąd podczas łączenia się z usługą</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Wyłączyć PIN blokady rejestracji?</string>
