--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -270,12 +270,9 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Verificado</string>
   <!--CreateProfileActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">A sua informação de perfil</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Erro ao definir a fotografia de perfil</string>
   <string name="CreateProfileActivity_problem_setting_profile">Problema na configuração do perfil</string>
   <string name="CreateProfileActivity_profile_photo">Fotografia de perfil</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">Demasiado longo</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Nome de perfil</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Configurar o seu perfil</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Os perfis do Signal são encriptados de extremo-a-extremo e o serviço do Signal nunca tem acesso a esta informação.</string>
   <string name="CreateProfileActivity_set_avatar_description">Definir avatar</string>
@@ -550,17 +547,6 @@
   <string name="PlacePickerActivity_accept_address">Aceitar endereço</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">A versão do Serviços Google Play que tem instalada não está a funcionar corretamente. Por favor, reinstale o Google Play Services e tente novamente.</string>
-  <!--ProfileEditNameFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">Nome de perfil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">O seu nome de perfil pode ser visto pelos seus contactos e por outros utilizadores ou grupos quando inicia uma conversa ou aceita um pedido de conversação.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Guardar</string> -->
-  <!--ProfileEditOverviewFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Perfil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">Nome de perfil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">Nome de utilizador</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">Criar um nome de perfil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">Criar um nome de utilizador</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">O seu Perfil do Signal pode ser visto pelos seus contactos e por outros utilizadores ou grupos quando você inicia uma conversa ou aceita um pedido de conversa. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Toque aqui para saber mais</a>.</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Avaliar esta aplicação</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Se gostou desta aplicação, ajude-nos avaliando-a.</string>
@@ -804,7 +790,7 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">Abra o Signal para verificar se existem notificações recentes.</string>
   <string name="MessageNotifier_contact_message">%1$s%2$s</string>
   <string name="MessageNotifier_unknown_contact_message">Contacto</string>
-  <string name="MessageNotifier_reacted_to_your_message">Reagiu à sua mensagem: %1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_reacted_to_your_message">Reagiu à sua mensagem: %1$s</string> -->
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">Predefinição</string>
   <string name="NotificationChannel_calls">Chamadas</string>
@@ -890,8 +876,8 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="contact_selection_activity__invite_to_signal">Convite para o Signal</string>
   <!--contact_filter_toolbar-->
   <string name="contact_filter_toolbar__clear_entered_text_description">Limpar o texto introduzido</string>
-  <string name="contact_filter_toolbar__show_keyboard_description">Exibir teclado</string>
-  <string name="contact_filter_toolbar__show_dial_pad_description">Exibir teclado de marcação</string>
+  <string name="contact_filter_toolbar__show_keyboard_description">Mostrar teclado</string>
+  <string name="contact_filter_toolbar__show_dial_pad_description">Mostrar teclado de marcação</string>
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">Sem contactos.</string>
   <string name="contact_selection_group_activity__finding_contacts">A carregar contactos…</string>
@@ -1061,10 +1047,9 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">O Signal precisa de definições de MMS para transmitir multimédia e mensagens de grupo através da sua operadora. O seu aparelho não disponibiliza essa informação, o que poderá ocorrer em aparelhos bloqueados ou com configurações restritivas.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Para enviar ficheiros multimédia e mensagens de grupo toque em \"OK\" e complete as definições solicitadas. As definições de MMS para a sua operadora podem normalmente ser encontradas ao pesquisar na internet por \"[nome do operador] APN\". Apenas é necessário efectuar isto uma vez.</string>
   <!--profile_create_activity-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Definir mais tarde</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">TERMINAR</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Quem pode ver esta informação?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">O seu nome</string> -->
+  <string name="CreateProfileActivity_next">Seguinte</string>
+  <string name="CreateProfileActivity__username">Nome de utilizador</string>
+  <string name="CreateProfileActivity__create_a_username">Criar um nome de utilizador</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Ficheiros partilhados</string>
   <!--recipient_preferences-->
@@ -1495,7 +1480,6 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">O PIN de registo ajuda-o/a a proteger o seu número de telefone de tentativas não autorizadas de registo. Esta capacidade pode ser desativada em qualquer altura, acedendo às Definições de privacidade do Signal</string>
   <string name="RegistrationLockDialog_registration_lock">Bloqueio de registo</string>
   <string name="RegistrationLockDialog_enable">Ativar</string>
-  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">O PIN de bloqueio do registo tem de ter pelo menos 4 dígitos.</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">Os dois PIN inseridos não coincidem.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Erro ao estabelecer a ligação com o serviço</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Desativar o PIN de bloqueio do registo?</string>
