--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -298,12 +298,9 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Подтверждён</string>
   <!--CreateProfileActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Информация вашего профиля</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Ошибка при установке фото профиля</string>
   <string name="CreateProfileActivity_problem_setting_profile">Ошибка при установке профиля</string>
   <string name="CreateProfileActivity_profile_photo">Фото профиля</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">Слишком длинно</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Имя профиля</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Настройте свой профиль</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Профили Signal защищены сквозным шифрованием, и сервис Signal не имеет доступа к этой информации.</string>
   <string name="CreateProfileActivity_set_avatar_description">Установить аватар</string>
@@ -592,17 +589,6 @@
   <string name="PlacePickerActivity_accept_address">Принять адрес</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Установленная версия Сервисов Google Play работает некорректно. Пожалуйста, переустановите Сервисы Google Play и попробуйте ещё раз.</string>
-  <!--ProfileEditNameFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">Имя профиля</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Имя вашего профиля видно вашим контактам и другим пользователям или группам, когда вы начинаете разговор или принимаете запрос на общение.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Сохранить</string> -->
-  <!--ProfileEditOverviewFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Профиль</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">Имя профиля</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">Имя пользователя</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">Создать имя профиля</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">Создать имя пользователя</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Ваш профиль Signal виден вашим контактам и другим пользователям или группам, когда вы начинаете разговор или принимаете запрос на общение. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Нажмите здесь, чтобы узнать больше</a>.</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Оцените это приложение</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Если вам нравится это приложение, пожалуйста, найдите минутку, чтобы помочь нам, поставив ему оценку.</string>
@@ -845,7 +831,7 @@
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">Откройте Signal, чтобы проверить наличие новых уведомлений.</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
   <string name="MessageNotifier_unknown_contact_message">Контакт</string>
-  <string name="MessageNotifier_reacted_to_your_message">Отреагировал на ваше сообщение: %1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_reacted_to_your_message">Отреагировал(-а) на ваше сообщение: %1$s</string> -->
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">По умолчанию</string>
   <string name="NotificationChannel_calls">Звонки</string>
@@ -1118,10 +1104,11 @@
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Приложению Signal необходимо знать настройки MMS вашего сотового оператора, чтобы отправлять и получать мультимедийные и групповые сообщения. Ваше устройство не даёт доступа к этой информации — так иногда бывает, если в телефоне запрещена смена SIM-карты и в некоторых иных случаях.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Чтобы отправлять мультимедийные и групповые сообщения, нажмите «ОК» и введите необходимые настройки. Настройки MMS вашего оператора обычно можно найти в интернете по запросу «ваш оператор APN». Это нужно сделать только один раз.</string>
   <!--profile_create_activity-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Настроить позже</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">ЗАВЕРШИТЬ</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Кто может видеть эту информацию?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Ваше имя</string> -->
+  <string name="CreateProfileActivity_first_name_required">Имя (обязательно)</string>
+  <string name="CreateProfileActivity_last_name_optional">Фамилия (необязательно)</string>
+  <string name="CreateProfileActivity_next">Далее</string>
+  <string name="CreateProfileActivity__username">Имя пользователя</string>
+  <string name="CreateProfileActivity__create_a_username">Создать имя пользователя</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Общие медиа</string>
   <!--recipient_preferences-->
@@ -1556,7 +1543,7 @@
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Блокировка регистрации помогает защитить ваш номер телефона от несанкционированных попыток регистрации. Эта функция может быть отключена в любое время в настройках конфиденциальности Signal</string>
   <string name="RegistrationLockDialog_registration_lock">Блокировка регистрации</string>
   <string name="RegistrationLockDialog_enable">Включить</string>
-  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">PIN-код блокировки регистрации должен быть не короче 4-х цифр.</string> -->
+  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_d_digits">PIN блокировки регистрации должен быть не менее %d цифр.</string>
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">Два введенных PIN-кода не совпадают.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Ошибка подключения к сервису</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Отключить PIN-код блокировки регистрации?</string>
