--- a/app/src/main/res/values-sl/strings.xml
+++ b/app/src/main/res/values-sl/strings.xml
@@ -298,12 +298,9 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Potrjeno</string>
   <!--CreateProfileActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Vaša predstavitvena fotografija</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Napaka pri pošiljanju predstavitvene fotografije</string>
   <string name="CreateProfileActivity_problem_setting_profile">Napaka pri nastavljanju profila</string>
   <string name="CreateProfileActivity_profile_photo">Predstavitvena fotografija</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">Ime profila je predolgo</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Ime profila</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Nastavite svoj profil</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Profili v aplikaciji Signal so šifrirani od konca do konca, storitev Signal do njihove vsebine nima dostopa.</string>
   <string name="CreateProfileActivity_set_avatar_description">Določi avatar</string>
@@ -592,17 +589,6 @@
   <string name="PlacePickerActivity_accept_address">Sprejmi naslov</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Različica programa Google Play Services, ki jo imate nameščeno, ne deluje, kot bi morala. Prosimo, ponovno namestite Google Play Services in poskusite znova.</string>
-  <!--ProfileEditNameFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">Naziv profila</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Naziv vašega profila je viden vašim stikom ter drugim uporabnikom in skupinam kadar začnete pogovor z njimi ali sprejmete njihovo povabilo k pogovoru.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Shrani</string> -->
-  <!--ProfileEditOverviewFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Profil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">Naziv profila</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">Uporabniško ime</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">Stvaritev imena profila</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">Stvaritev uporabniškega imena</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Vaš Pofil Signal je viden vašim stikom ter drugim uporabnikom in skupinam kadar začnete pogovor z njimi ali sprejmete njihovo povabilo k pogovoru. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Za več informacij tapnite tukaj</a>.</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Oceni to aplikacijo</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Če se vam zdi aplikacija Signal koristna in uporabna, vas prosimo, da si vzamete nekaj trenutkov in jo ocenite.</string>
@@ -843,7 +829,7 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">Odprite Signal in preverite nova sporočila.</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
   <string name="MessageNotifier_unknown_contact_message">Stik</string>
-  <string name="MessageNotifier_reacted_to_your_message">Odziv na vaše sporočilo: %1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_reacted_to_your_message">Odziv na vaše sporočilo: %1$s</string> -->
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">Privzeto</string>
   <string name="NotificationChannel_calls">Klici</string>
@@ -1116,10 +1102,11 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Za pošiljanje vešpredsatvnostnih in skupinskih sporočil potrebuje aplikacija Signal nastavitve MMS vašega mobilnega operaterja. Teh podatkov ni mogoče pridobiti iz vaše naprave, kar je značilno za zaklenjene naprave in druge omejene konfiguracije. </string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Za pošiljanje večpredstavnostnih in skupinskih sporočil tapnite \'OK\' in vnesite potrebne podatke. Nastavitve MMS za vašega operaterja lahko najverjetneje najdete z iskanjem po spletu. Podatke morate vnesti samo enkrat.</string>
   <!--profile_create_activity-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Nastavi kasneje</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">DOKONČAJ</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Kdo lahko vidi vse to?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Vaše ime</string> -->
+  <string name="CreateProfileActivity_first_name_required">Ime (zahtevano)</string>
+  <string name="CreateProfileActivity_last_name_optional">Priimek (neobvezno)</string>
+  <string name="CreateProfileActivity_next">Naprej</string>
+  <string name="CreateProfileActivity__username">Uporabniško ime</string>
+  <string name="CreateProfileActivity__create_a_username">Stvaritev uporabniškega imena</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Deljene datoteke</string>
   <!--recipient_preferences-->
@@ -1531,7 +1518,7 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">Koda PIN za prijavo v omrežje ni enaka potrditveni kodi SMS, ki ste jo prejeli ravnokar. Prosimo, vnesite PIN, ki ste ga predhodno določili za zaklepanje.</string>
   <string name="registration_activity__registration_lock_pin">PIN za prijavo v omrežje</string>
   <string name="registration_activity__forgot_pin">Ste pozabili PIN?</string>
-  <string name="registration_lock_dialog_view__the_pin_can_consist_of_four_or_more_digits_if_you_forget_your_pin_you_could_be_locked_out_of_your_account_for_up_to_seven_days">Koda PIN mora vsebovati vsaj štiri števke. Če boste pozabili svoj PIN, lahko ostanete do sedem dni brez storitve Signal.</string>
+  <string name="registration_lock_dialog_view__the_pin_can_consist_of_four_or_more_digits_if_you_forget_your_pin_you_could_be_locked_out_of_your_account_for_up_to_seven_days">Koda PIN mora vsebovati vsaj štiri številke. Če boste pozabili svoj PIN, lahko ostanete do sedem dni brez storitve Signal.</string>
   <string name="registration_lock_dialog_view__enter_pin">Vnesite PIN</string>
   <string name="registration_lock_dialog_view__confirm_pin">Potrdite PIN</string>
   <string name="registration_lock_reminder_view__enter_your_registration_lock_pin">Vnesite PIN za prijavo v omrežje</string>
@@ -1539,14 +1526,14 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="preferences_app_protection__enable_a_registration_lock_pin_that_will_be_required">Vklop kode PIN za prijavo v omrežje. Vnos kode bo potreben vsakič, ko se boste želeli ponovno prijaviti v omrežje Signal.</string>
   <string name="preferences_app_protection__registration_lock_pin">PIN za prijavo v omrežje</string>
   <string name="preferences_app_protection__registration_lock">Zaklep prijave na strežnik</string>
-  <string name="RegistrationActivity_you_must_enter_your_registration_lock_PIN">Vnesti morate kodo PIN za prijavo na strežnik</string>
-  <string name="RegistrationActivity_incorrect_registration_lock_pin">Napačna koda PIN za prijavo na strežnik</string>
+  <string name="RegistrationActivity_you_must_enter_your_registration_lock_PIN">Vnesti morate kodo PIN za prijavo v omrežje</string>
+  <string name="RegistrationActivity_incorrect_registration_lock_pin">Napačna koda PIN za prijavo v omrežje</string>
   <string name="RegistrationActivity_too_many_attempts">Preveč poskusov</string>
   <string name="RegistrationActivity_you_have_made_too_many_incorrect_registration_lock_pin_attempts_please_try_again_in_a_day">Prevečkrat ste vnesli napačen PIN za prijavo v omrežje Signal. Poskusite znova jutri.</string>
   <string name="RegistrationActivity_error_connecting_to_service">Napaka pri povezavi do storitve</string>
   <string name="RegistrationActivity_oh_no">Neeee!</string>
   <string name="RegistrationActivity_registration_of_this_phone_number_will_be_possible_without_your_registration_lock_pin_after_seven_days_have_passed">Prijava s to telefonsko številko brez kode za zaklep bo zopet možna po sedmih dneh, odkar je bila številka nazadnje aktivna v omrežju Signal. Število dni do prijave: %d</string>
-  <string name="RegistrationActivity_registration_lock_pin">PIN za prijavo na strežnik</string>
+  <string name="RegistrationActivity_registration_lock_pin">PIN za prijavo v omrežje</string>
   <string name="RegistrationActivity_this_phone_number_has_registration_lock_enabled_please_enter_the_registration_lock_pin">Telefonska številka ima vklopljen PIN za prijavo v omrežje. Prosimo, vnesite kodo PIN za prijavo.</string>
   <string name="RegistrationLockDialog_registration_lock_is_enabled_for_your_phone_number">Za to telefonsko številko je vklujčen PIN za prijavo v omrežje Signal. Da ne bi pozabili kode za prijavo, vas bomo občasno opomnili na njen vnos.</string>
   <string name="RegistrationLockDialog_i_forgot_my_pin">Pozabil sem svoj PIN.</string>
@@ -1554,7 +1541,7 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Zaklep prijave na strežnik vas ščiti pred nepooblaščeno prijavo tretje osebe z vašo telefonsko številko. Storitev lahko kadarkoli izkopite v meniju \"Zasebnost\" v nastavitvah aplikacije Signal.</string>
   <string name="RegistrationLockDialog_registration_lock">Zaklep prijave na strežnik</string>
   <string name="RegistrationLockDialog_enable">Vklopi</string>
-  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">Koda PIN za prijavo v omrežje mora vsebovati vsaj 4 števke.</string> -->
+  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_d_digits">PIN za prijavo v omrežje mora vsebovati vsaj %d številke.</string>
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">Kodi PIN, ki ste ju vnesli, se ne ujemata.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Napaka pri povezavi do storitve</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Izklopim PIN za prijavo v omrežje?</string>
