--- a/app/src/main/res/values-sq/strings.xml
+++ b/app/src/main/res/values-sq/strings.xml
@@ -270,12 +270,9 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">U verifikua</string>
   <!--CreateProfileActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Të dhëna të profilit tuaj</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Gabim në caktim fotoje profili</string>
   <string name="CreateProfileActivity_problem_setting_profile">Problem në rregullim profili</string>
   <string name="CreateProfileActivity_profile_photo">Foto profili</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">Shumë i gjatë</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Emër Profili</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Ujdisni profilin tuaj</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Profilet Signal fshehtëzohen skaj-më-skaj, dhe shërbimi Signal s\’mund të hyjë kurrë në këto të dhëna.</string>
   <string name="CreateProfileActivity_set_avatar_description">Caktoni avatar</string>
@@ -549,17 +546,6 @@
   <string name="PlacePickerActivity_accept_address">Pranoje adresën</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Versioni i Google Play Services që keni instaluar nuk funksionon saktë. Ju lutemi. riinstaloni Google Play Services dhe riprovoni.</string>
-  <!--ProfileEditNameFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">Emër profili</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Emri juaj i profilit mund të shihet nga kontakte tuaja dhe nga përdorues ose grupe të tjerë, kur filloni një bisedë ose pranoni një kërkesë për bisedë.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Ruaje</string> -->
-  <!--ProfileEditOverviewFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Profil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">Emër profili</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">Emër përdoruesi</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">Krijoni emër profili</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">Krijoni emër përdoruesi</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Profili juaj Signal mund të shihet nga kontakte tuaja dhe nga përdorues ose grupe të tjerë, kur filloni një bisedë ose pranoni një kërkesë për bisedë. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Prekni këtu që të mësoni më tepër</a>.</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Vlerësojeni këtë aplikacion</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Nëse ju pëlqen ta përdorni këtë aplikacion, ju lutemi, ndaluni një çast të na ndihmoni duke e vlerësuar atë.</string>
@@ -803,7 +789,7 @@
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">Që të shihni për njoftime së fundi, hapni Signal-in.</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
   <string name="MessageNotifier_unknown_contact_message">Kontakt</string>
-  <string name="MessageNotifier_reacted_to_your_message">Reagoi ndaj mesazhit tuaj: %1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_reacted_to_your_message">Reagoi ndaj mesazhit tuaj: %1$s</string> -->
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">Parazgjedhje</string>
   <string name="NotificationChannel_calls">Thirrje</string>
@@ -1060,10 +1046,11 @@
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Që të shpërndajë media dhe mesazhe grupi përmes shërbimit tuaj celular, Signal-i lyp rregullime për MMS-në. Pajisja juaj celulare nuk ofron të dhëna të tilla, çka ndodh, me raste, për pajisje të kyçura ose formësimeve të tjera kufizuese.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Për të dërgua media dhe mesazhe grupi, prekni \'OK\' dhe plotësoni rregullimet e domosdoshme. Rregullimet MMS për operatorin tuaj zakonisht mund të gjenden duke kërkuar për \'APN-në e operatorit tuaj\'. Këtë do t\’ju duhet ta bëni vetëm një herë.</string>
   <!--profile_create_activity-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Caktojini më vonë</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">PËRFUNDOJE</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Kush mund t\’i shohë këto të dhëna?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Emri juaj</string> -->
+  <string name="CreateProfileActivity_first_name_required">Emër (i domosdoshëm)</string>
+  <string name="CreateProfileActivity_last_name_optional">Mbiemër (i domosdoshëm)</string>
+  <string name="CreateProfileActivity_next">Pasuesi</string>
+  <string name="CreateProfileActivity__username">Emër përdoruesi</string>
+  <string name="CreateProfileActivity__create_a_username">Krijoni emër përdoruesi</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Media e ndarë me të tjerët</string>
   <!--recipient_preferences-->
@@ -1493,7 +1480,7 @@
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Kyçja e Regjistrimit ndihmon të mbrohet numri juaj i telefoni nga përpjekje regjistrimi të paautorizuara. Kjo veçori mund të çaktivizohet kur të doni, te rregullimet tuaja mbi privatësinë në Signal</string>
   <string name="RegistrationLockDialog_registration_lock">Kyçj Regjistrimi</string>
   <string name="RegistrationLockDialog_enable">Aktivizoje</string>
-  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">PIN-i i Kyçjes së Regjistrimit duhet të jetë të paktën 4 shifra.</string> -->
+  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_d_digits">PIN-i i Kyçjes së Regjistrimit duhet të jetë të paktën %d shifra.</string>
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">Dy PIN-et që dhatë nuk përputhen.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Gabim gjatë lidhjes me shërbimin</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Të çaktivizohet PIN-i i Kyçjes së Regjistrimit?</string>
