--- a/app/src/main/res/values-sr/strings.xml
+++ b/app/src/main/res/values-sr/strings.xml
@@ -274,12 +274,9 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Потврђен</string>
   <!--CreateProfileActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Подаци вашег профила</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Грешка постављања профилне слике</string>
   <string name="CreateProfileActivity_problem_setting_profile">Проблем у поставци профила</string>
   <string name="CreateProfileActivity_profile_photo">Профилна слика</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">Предугачко</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Ваше име</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Поставите вашу слику</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Сигнал профили су потпуно шифровани и Сигнал никада нема приступ вашим подацима.</string>
   <string name="CreateProfileActivity_set_avatar_description">Постави аватар</string>
@@ -513,9 +510,6 @@
   <string name="PlacePickerActivity_accept_address">Прихвати адресу</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Инсталирано издање Гуглових Плеј сервиса не функционише исправно. Реинсталирајте Гуглове Плеј сервисе и покушајте поново.</string>
-  <!--ProfileEditNameFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Сачувај</string> -->
-  <!--ProfileEditOverviewFragment-->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Оцените апликацију</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Ако уживате у коришћењу ове апликације, помозите нам тако што ћете да је оцените.</string>
@@ -964,10 +958,7 @@
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal захтева ММС поставке да би испоручио мултимедијалне и групне поруке преко вашег оператера. Ваш уређај не даје ове податке, што повремено важи за закључане уређаје и друге ограничавајуће конфигурације.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Да бисте слали мултимедијалне и групне поруке тапните „У реду“ и попуните захтеване поставке. ММС поставке за вашег оператера углавном можете наћи претрагом „мој оператер APN“. Ово треба да урадите само једном.</string>
   <!--profile_create_activity-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Постави касније</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">ЗАВРШИ</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Ко може да види ове податке?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Ваше име</string> -->
+  <string name="CreateProfileActivity_next">Даље</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Дељене датотеке</string>
   <!--recipient_preferences-->
@@ -1365,7 +1356,6 @@
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Пријавни код спречава неовлашћену регистрацију вашег броја телефона. Ову могућност увек можете искључити унутар подешавања приватности.</string>
   <string name="RegistrationLockDialog_registration_lock">Закључавање регистрације</string>
   <string name="RegistrationLockDialog_enable">Укључи</string>
-  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">ПИН за закључавање регистрације мора имати најмање 4 цифре.</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">Два ПИН броја које сте унели се не поклапају.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Грешка при повезивању са сервисом</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Онемогући ПИН заштиту регистрације?</string>
