--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -270,12 +270,9 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">சரிபார்க்கப்பட்டது</string>
   <!--CreateProfileActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">உங்கள் சுயவிவரத் தகவல்</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">சுயவிவர புகைப்படத்தை அமைப்பதில் பிழை</string>
   <string name="CreateProfileActivity_problem_setting_profile">சுயவிவரம் அமைப்பதில் சிக்கல் </string>
   <string name="CreateProfileActivity_profile_photo">சுயவிவர புகைப்படம்</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">மிக நீண்ட</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">சுயவிவரப் பெயர்</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">உங்கள் சுயவிவரத்தை அமைக்கவும்</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Signal சுயவிவரங்கள் இறுதி முதல் இறுதி வரை குறியாக்கம் செய்யப்பட்டுள்ளன, மேலும் Signal சேவைக்கு இந்த தகவலுக்கான அணுகல் இல்லை.</string>
   <string name="CreateProfileActivity_set_avatar_description">அவதாரம் அமைக்கவும்</string>
@@ -551,17 +548,6 @@
   <string name="PlacePickerActivity_accept_address">முகவரியை ஒப்புக்கொள்</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">நீங்கள் நிறுவிய Google Play சேவைகளின் பதிப்பு சரியாக செயல்படவில்லை. Google Play சேவைகளை மீண்டும் நிறுவி மீண்டும் முயற்சிக்கவும்.</string>
-  <!--ProfileEditNameFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">சுயவிவரப் பெயர்</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">உங்கள் சுயவிவரப் பெயரைக் காணலாம் உங்கள் தொடர்புகள் மற்றும் மூலம் மற்ற பயனர்கள் அல்லது குழுக்கள் எப்போது நீங்கள் உரையாடலைத் தொடங்கவும் அல்லது உரையாடல் கோரிக்கையை ஏற்கவும்.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">சேமி</string> -->
-  <!--ProfileEditOverviewFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">விவரம்</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">சுயவிவரப் பெயர்</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">பயனர்பெயர்</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">சுயவிவரப் பெயரை உருவாக்கவும்</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">பயனர்பெயரை உருவாக்கவும்</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">நீங்கள் ஒரு உரையாடலைத் தொடங்கும்போது அல்லது உரையாடல் கோரிக்கையை ஏற்கும்போது உங்கள் தொடர்புகள் மற்றும் பிற பயனர்கள் அல்லது குழுக்களால் உங்கள் Signal சுயவிவரத்தைக் காணலாம். <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">மேலும் அறிய இங்கே தட்டவும்</a>.</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">இச் செயலியை மதிப்புரை செய்க</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">இச் செயலியின்  பயன்பாட்டை விரும்பினால் தயை கூர்ந்து  எங்கள் செயலியை   மதிப்புரை செய்க    </string>
@@ -805,7 +791,7 @@
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">சமீபத்திய அறிவிப்புகளைச் சரிபார்க்க Signal திறக்கவும்.</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
   <string name="MessageNotifier_unknown_contact_message">தொடர்பு</string>
-  <string name="MessageNotifier_reacted_to_your_message">உங்கள் செய்திக்கு பதிலளித்தது: %1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_reacted_to_your_message">உங்கள் செய்திக்கு பதிலளித்தது: %1$s</string> -->
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">இயல்புநிலை</string>
   <string name="NotificationChannel_calls">அழைப்புகள்</string>
@@ -1063,10 +1049,9 @@
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">உங்கள் வயர்லெஸ் கேரியர் மூலம் மீடியா மற்றும் குழு செய்திகளை வழங்க Signal கு எம்எம்எஸ் அமைப்புகள் தேவை. உங்கள் சாதனத்தில் இந்த தகவல் கிடைக்கும்  இருப்பில் இருக்காது, இது பூட்டப்பட்ட சாதனங்கள், மற்றும் பிற கட்டுப்பாட்டு உள்ளமைவுகளுக்கு, அவ்வப்போது பொருந்தும்  உண்மை.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">மீடியா மற்றும் குழு செய்திகளை அனுப்ப, \'சரி\' என்பதைத் தட்டவும், கோரப்பட்ட அமைப்புகளை முடிக்கவும். \'உங்கள் கேரியர் APN\' ஐத் தேடுவதன் மூலம் உங்கள் கேரியருக்கான MMS அமைப்புகள் பொதுவாக அமைந்திருக்கும். நீங்கள் இதை ஒரு முறை மட்டுமே செய்ய வேண்டும்.</string>
   <!--profile_create_activity-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">பின்னர் அமைக்கவும்</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">முடி</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">இந்த தகவலை யார் காணலாம்?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">உங்கள் பெயர்</string> -->
+  <string name="CreateProfileActivity_next">அடுத்தது</string>
+  <string name="CreateProfileActivity__username">பயனர்பெயர்</string>
+  <string name="CreateProfileActivity__create_a_username">பயனர்பெயரை உருவாக்கவும்</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">பகிரப்பட்ட மீடியா</string>
   <!--recipient_preferences-->
@@ -1498,7 +1483,6 @@
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">பதிவு பூட்டு உங்கள் தொலைபேசி எண்ணை அங்கீகரிக்கப்படாத பதிவு முயற்சிகளிலிருந்து பாதுகாக்க உதவுகிறது. உங்கள் Signal தனியுரிமை அமைப்புகளில் எந்த நேரத்திலும் இந்த அம்சத்தை முடக்கலாம்</string>
   <string name="RegistrationLockDialog_registration_lock">பதிவு பூட்டு</string>
   <string name="RegistrationLockDialog_enable">செயல்படுத்து</string>
-  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">பதிவு பூட்டு பின் குறைந்தபட்சம் 4 இலக்கங்களாக இருக்க வேண்டும்.</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">நீங்கள் உள்ளிட்ட இரண்டு பின்களும்  பொருந்தவில்லை.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">சேவைக்கு இணைப்பதில் பிழை</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">பதிவு பூட்டு பின் முடக்கவா?</string>
