--- a/app/src/main/res/values-te/strings.xml
+++ b/app/src/main/res/values-te/strings.xml
@@ -242,6 +242,8 @@
   <string name="ConversationFragment_failed_to_open_message">సందేశాన్ని తెరవడంలో విఫలమైంది</string>
   <string name="ConversationFragment_you_can_swipe_to_the_right_reply">త్వరగా సమాధానం ఇవ్వడానికి మీరు ఏదైనా సందేశంలో కుడివైపు స్వైప్ చేయవచ్చు</string>
   <string name="ConversationFragment_you_can_swipe_to_the_left_reply">త్వరగా సమాధానం ఇవ్వడానికి మీరు ఏదైనా సందేశంలో ఎడమ వైపుకు స్వైప్ చేయవచ్చు</string>
+  <string name="ConversationFragment_outgoing_view_once_media_files_are_automatically_removed">అవుట్గోయింగ్  ఒకసారి-దృశ్యం  మీడియా ఫైల్స్ పంపిన తర్వాత స్వయంచాలకంగా తొలగించబడతాయి</string>
+  <string name="ConversationFragment_you_already_viewed_this_message">మీరు ఇప్పటికే ఈ సందేశాన్ని చూశారు</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">మీ పరికరంలో ఎటువంటి బ్రౌజర్ ఇన్స్టాల్ అయి లేదు</string>
   <!--ConversationListFragment-->
@@ -272,12 +274,9 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">ధృవీకరించబడింది</string>
   <!--CreateProfileActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">మీ రూప సమాచారం</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">రూపచిత్రం సెట్ చేయడంలో లోపం</string>
   <string name="CreateProfileActivity_problem_setting_profile">రూపాన్ని సెట్ చేయడంలో సమస్య</string>
   <string name="CreateProfileActivity_profile_photo">రూపచిత్రం </string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">చాలా పొడవు</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">ఖాతాదారుని పేరు</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">మీ రూపంను సెటప్ చేయండి</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Signal రూపం ఎండ్-టు-ఎండ్ గుప్తీకరించబడ్డాయి మరియు Signal సేవకు ఈ సమాచారానికి ప్రాప్యత లేదు.</string>
   <string name="CreateProfileActivity_set_avatar_description">అవతార్ సెట్ చేయండి</string>
@@ -488,6 +487,7 @@
     <item quantity="other">మీరు %d అంశాల కంటే ఎక్కువ భాగస్వామ్యం చేయలేరు.</item>
   </plurals>
   <string name="MediaSendActivity_select_recipients_description">గ్రహీతలను ఎంచుకోండి</string>
+  <string name="MediaSendActivity_tap_here_to_make_this_message_disappear_after_it_is_viewed">ఈ సందేశం చూసిన తర్వాత అదృశ్యమయ్యేలా ఇక్కడ నొక్కండి.</string>
   <!--MediaRepository-->
   <string name="MediaRepository_all_media">అన్ని మీడియా</string>
   <!--MessageRecord-->
@@ -552,17 +552,6 @@
   <string name="PlacePickerActivity_accept_address">చిరునామాను అంగీకరించండి</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">గూగుల్ ఫ్లే సేవలు ఒక్క వివరణం సరిగ్గ పని చెయ్యటంలేదు. దయచేసి  గూగుల్ ఫ్లే సేవలను మరల నెలకొల్పండి.</string>
-  <!--ProfileEditNameFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">ఖాతాదారుని పేరు</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">మీరు సంభాషణను ప్రారంభించినప్పుడు లేదా సంభాషణ అభ్యర్థనను అంగీకరించినప్పుడు మీ ప్రొఫైల్ పేరును మీ పరిచయాలు మరియు ఇతర వినియోగదారులు లేదా సమూహాలు చూడవచ్చు.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">భద్రపరుచు</string> -->
-  <!--ProfileEditOverviewFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">రూపం</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">ఖాతాదారుని పేరు</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">వినియోగదారుడు </string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">ప్రొఫైల్ పేరును సృష్టించండి</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">ఒక వాడుక పేరు సృష్టించు</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">మీరు సంభాషణను ప్రారంభించినప్పుడు లేదా సంభాషణ అభ్యర్థనను అంగీకరించినప్పుడు మీ పరిచయాలు మరియు ఇతర వినియోగదారులు లేదా సమూహాలు మీ Signal ప్రొఫైల్ చూడవచ్చు.<a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">మరింత తెలుసుకోవడానికి ఇక్కడ నొక్కండి</a>.</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">ఈ అప్లికేషన్ ని రేట్ చెయ్యండి</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">ఈ కార్యక్షేత్రం నచ్చినచొ,దయచేసి కొంత సమయము వెచ్చించి దినిని విలువ కట్టండి.</string>
@@ -641,6 +630,7 @@
   <string name="RegistrationActivity_call">కాల్</string>
   <!--RevealableMessageView-->
   <string name="RevealableMessageView_view_photo">చిత్రాలు వీక్షించండి </string>
+  <string name="RevealableMessageView_view_video">వీడియో చూడండి</string>
   <string name="RevealableMessageView_viewed">వీక్షించినవి</string>
   <string name="RevealableMessageView_media">మీడియా</string>
   <!--ScribbleActivity-->
@@ -701,6 +691,9 @@
   <string name="ThreadRecord_missed_call">తప్పిన కాల్</string>
   <string name="ThreadRecord_media_message">మీడియ సందేశం</string>
   <string name="ThreadRecord_sticker">స్టికర్</string>
+  <string name="ThreadRecord_view_once_photo">ఒకసారి-దృశ్యం  ఫోటో</string>
+  <string name="ThreadRecord_view_once_video">ఒకసారి-దృశ్యం వీడియో</string>
+  <string name="ThreadRecord_view_once_media">ఒకసారి-దృశ్యం మీడియా</string>
   <string name="ThreadRecord_s_is_on_signal">1%s Signal ఉంది!</string>
   <string name="ThreadRecord_disappearing_messages_disabled">కనుమరుగవుతున్న సందేశాలు నిలిపివేయబడ్డాయి</string>
   <string name="ThreadRecord_disappearing_message_time_updated_to_s"> కనుమరుగవుథున సంధెషం కొరకు సమయం కుర్చుత కొసం %s</string>
@@ -791,6 +784,8 @@
   <string name="MessageNotifier_mark_read">చదివినట్టు గుర్తుపెట్టు</string>
   <string name="MessageNotifier_media_message">మీడియ సందేశం</string>
   <string name="MessageNotifier_sticker">స్టికర్</string>
+  <string name="MessageNotifier_view_once_photo">ఒకసారి-దృశ్యం ఫోటో</string>
+  <string name="MessageNotifier_view_once_video">ఒకసారి-దృశ్యం వీడియో</string>
   <string name="MessageNotifier_reply">స్పంధించు</string>
   <string name="MessageNotifier_signal_message">Signal సందేశం</string>
   <string name="MessageNotifier_unsecured_sms">భద్రతలేని సందేశం</string>
@@ -798,7 +793,7 @@
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">ఇటీవలి నోటిఫికేషన్‌ల కోసం తనిఖీ చేయడానికి Signal ను తెరవండి.</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
   <string name="MessageNotifier_unknown_contact_message">పరిచయం</string>
-  <string name="MessageNotifier_reacted_to_your_message">మీ సందేశానికి ప్రతిస్పందించారు:%1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_reacted_to_your_message">మీ సందేశానికి ప్రతిస్పందించారు:%1$s</string> -->
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">అప్రమేయం</string>
   <string name="NotificationChannel_calls">కాల్స్</string>
@@ -936,6 +931,7 @@
   <string name="QuoteView_audio">ఆడియో</string>
   <string name="QuoteView_video">వీడియో</string>
   <string name="QuoteView_photo">చిత్రం </string>
+  <string name="QuoteView_view_once_media">ఒకసారి-దృశ్యం మీడియా</string>
   <string name="QuoteView_sticker">స్టికర్</string>
   <string name="QuoteView_document">పత్రం</string>
   <string name="QuoteView_you">మీరు</string>
@@ -1054,10 +1050,11 @@
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal మీ వైర్లెస్ క్యారియర్ ద్వారా మీడియా మరియు గుంపు సందేశాలు బట్వాడా ఎంఎంఎస్ సెట్టింగులు అవసరం. మీ పరికరం లాక్ పరికరాలు మరియు ఇతర మితమైన ఆకృతీకరణలు కోసం అప్పుడప్పుడు నిజం ఈ సమాచారాన్ని అందుబాటులో, ఉండవని.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">మీడియా మరియు గుంపు సందేశాలు పంపేందుకు, \'సరే\' నొక్కండి మరియు అభ్యర్థించిన సెట్టింగులను పూర్తి. మీ క్యారియర్ ఎంఎంఎస్ సెట్టింగులను సాధారణంగా \'మీ క్యారియర్ APN\' శోధించడం ద్వారా గుర్తించవచ్చు. మీరు ఒకసారి ఈ చెయ్యాల్సి ఉంటుంది.</string>
   <!--profile_create_activity-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">తర్వాత సెట్ చేయండి</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">ముగించు</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">ఈ సమాచారాన్ని ఎవరు చూడగలరు?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">మీ పేరు</string> -->
+  <string name="CreateProfileActivity_first_name_required">మొదటి పేరు (అవసరం)</string>
+  <string name="CreateProfileActivity_last_name_optional">చివరి పేరు (ఐచ్ఛికం)</string>
+  <string name="CreateProfileActivity_next">తరువాత</string>
+  <string name="CreateProfileActivity__username">వినియోగదారుడు </string>
+  <string name="CreateProfileActivity__create_a_username">ఒక వాడుక పేరు సృష్టించు</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">భాగస్వామ్యం చేయబడిన మీడియా</string>
   <!--recipient_preferences-->
@@ -1488,7 +1485,7 @@
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">నమోదు లాక్ అనధికార నమోదు ప్రయత్నాల నుండి మీ ఫోన్ నంబర్ను రక్షించడంలో సహాయపడుతుంది. మీ Signal గోప్యతా సెట్టింగ్ల్లో ఎప్పుడైనా ఈ లక్షణం నిలిపివేయబడుతుంది</string>
   <string name="RegistrationLockDialog_registration_lock">నమోదు లాక్</string>
   <string name="RegistrationLockDialog_enable">ప్రారంభించు</string>
-  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">నమోదు లాక్ పిన్ తప్పనిసరిగా కనీసం 4 అంకెలు ఉండాలి.</string> -->
+  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_d_digits">నమోదు లాక్ పిన్ తప్పనిసరిగా కనీసం %d అంకెలు ఉండాలి.</string>
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">మీరు నమోదు చేసిన రెండు PIN లు సరిపోలేదు.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">సేవకు కనెక్ట్ చేయడంలో లోపం</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">నమోదు లాక్ పిన్ను నిలిపివేయాలా?</string>
