--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -113,8 +113,8 @@
   <string name="ContactsCursorLoader_recent_chats">Son sohbetler</string>
   <string name="ContactsCursorLoader_contacts">Kişiler</string>
   <string name="ContactsCursorLoader_groups">Gruplar</string>
-  <string name="ContactsCursorLoader_phone_number_search">Telefon numarası ara</string>
-  <string name="ContactsCursorLoader_username_search">Kullanıcı adı ara</string>
+  <string name="ContactsCursorLoader_phone_number_search">Telefon numarasıyla arama</string>
+  <string name="ContactsCursorLoader_username_search">Kullanıcı adıyla arama</string>
   <!--ContactsDatabase-->
   <string name="ContactsDatabase_message_s">İleti %s</string>
   <string name="ContactsDatabase_signal_call_s">Signal Araması %s</string>
@@ -270,12 +270,9 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Doğrulandı</string>
   <!--CreateProfileActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Profil bilgileriniz</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Profil fotoğrafı kaydedilirken hata</string>
   <string name="CreateProfileActivity_problem_setting_profile">Profil ayarlanırken hata</string>
   <string name="CreateProfileActivity_profile_photo">Profil fotoğrafı</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">Çok uzun</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Profil Adı</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Profilinizi ayarlayın</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Signal profilleri uçtan uca şifrelidir ve Signal hizmeti asla bu bilgiye erişime sahip olmaz.</string>
   <string name="CreateProfileActivity_set_avatar_description">Avatar seçin</string>
@@ -312,7 +309,7 @@
   <string name="DozeReminder_optimize_for_missing_play_services">Eksik Google Play Hizmetleri için optimize et</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Bu cihaz Play Hizmetlerini desteklemiyor. Signal etkin değilken ileti almasını engelleyebilecek pil iyileştirmelerini devre dışı bırakmak için dokunun.</string>
   <!--ShareActivity-->
-  <string name="ShareActivity_share_with">Paylaşılan kişi</string>
+  <string name="ShareActivity_share_with">Paylaşılacak kişi</string>
   <!--ExperienceUpgradeActivity-->
   <string name="ExperienceUpgradeActivity_welcome_to_signal_dgaf">Signal\'e hoşgeldiniz.</string>
   <string name="ExperienceUpgradeActivity_textsecure_is_now_called_signal">TextSecure ve RedPhone artık tek bir özel haberleşme uygulaması: Signal.</string>
@@ -400,7 +397,7 @@
   <string name="InviteActivity_no_app_to_share_to">Paylaşmak için herhangi bir uygulamanız yok gibi görünüyor.</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">Arkadaşlar, arkadaşlarının şifresiz sohbet etmesine izin vermez.</string>
   <!--Job-->
-  <string name="Job_working_in_the_background">Arkaplanda çalışılıyor…</string>
+  <string name="Job_working_in_the_background">Arkaplanda çalışıyor…</string>
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">Gönderilemedi</string>
   <string name="MessageDetailsRecipient_new_safety_number">Yeni güvenlik numarası</string>
@@ -452,7 +449,7 @@
   <string name="MediaOverviewActivity_image">Görüntü</string>
   <string name="MediaOverviewActivity_sent_by_s">%1$s tarafından gönderilen</string>
   <string name="MediaOverviewActivity_sent_by_you">Sizin gönderdikleriniz</string>
-  <string name="MediaOverviewActivity_sent_by_s_to_s">%1$s tarafından %2$s kişisine gönderilen</string>
+  <string name="MediaOverviewActivity_sent_by_s_to_s">%1$s tarafından --&gt; %2$s </string>
   <string name="MediaOverviewActivity_sent_by_you_to_s">%1$s kişisine gönderdikleriniz</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal araması sürüyor</string>
@@ -551,17 +548,6 @@
   <string name="PlacePickerActivity_accept_address">Adresi onayla</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Kurulu Google Play Hizmetleri sürümü doğru çalışmıyor. Lütfen Google Play Hizmetleri\'ni tekrar yükleyin ve yeniden deneyin.</string>
-  <!--ProfileEditNameFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">Profil ismi</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Bir görüşme başlattığınızda veya bir konuşma isteğini kabul ettiğinizde profil adınız kişileriniz ve diğer kullanıcılar veya gruplar tarafından görülebilir.</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Kaydet</string> -->
-  <!--ProfileEditOverviewFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Profil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">Profil ismi</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">Kullanıcı adı</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">Bir profil ismi oluşturun</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">Bir kullanıcı adı oluşturun</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Bir görüşme başlattığınızda veya bir konuşma isteğini kabul ettiğinizde Signal Profiliniz kişileriniz ve diğer kullanıcılar veya gruplar tarafından görülebilir. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Dahasını öğrenmek için buraya dokunun</a>.</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Bu uygulamaya puan verin</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Bu uygulamayı kullanmaktan hoşlanıyorsanız, lütfen bir dakikanızı ayırıp puan vererek bize yardımcı olun.</string>
@@ -785,7 +771,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="MediaPreviewActivity_unable_to_write_to_external_storage_without_permission">İzinler olmadan harici depolamaya kaydedilemiyor</string>
   <string name="MediaPreviewActivity_media_delete_confirmation_title">İletiyi sil?</string>
   <string name="MediaPreviewActivity_media_delete_confirmation_message">Bu eylem bu iletiyi kalıcı olarak silecektir.</string>
-  <string name="MediaPreviewActivity_s_to_s">%1$s -&gt; %2$s</string>
+  <string name="MediaPreviewActivity_s_to_s">%1$s --&gt; %2$s</string>
   <!--MessageNotifier-->
   <string name="MessageNotifier_d_new_messages_in_d_conversations">%2$d sohbetten %1$d yeni ileti</string>
   <string name="MessageNotifier_most_recent_from_s">En yeni ileti: %1$s</string>
@@ -798,7 +784,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="MessageNotifier_mark_read">Okundu işaretle</string>
   <string name="MessageNotifier_media_message">İçerik iletisi</string>
   <string name="MessageNotifier_sticker">Çıkartma</string>
-  <string name="MessageNotifier_view_once_photo">Tek görümlük fotoğraf</string>
+  <string name="MessageNotifier_view_once_photo">Tek görümlük görüntü</string>
   <string name="MessageNotifier_view_once_video">Tek görümlük video</string>
   <string name="MessageNotifier_reply">Cevapla</string>
   <string name="MessageNotifier_signal_message">Signal İletisi</string>
@@ -807,7 +793,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">Yakın zamandaki bildirimler için Signal\'i açın.</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
   <string name="MessageNotifier_unknown_contact_message">Kişi</string>
-  <string name="MessageNotifier_reacted_to_your_message">İletinize karşılık verdi: %1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_reacted_to_your_message">İletinize karşılık verdi: %1$s</string> -->
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">Varsayılan</string>
   <string name="NotificationChannel_calls">Aramalar</string>
@@ -819,7 +805,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="NotificationChannel_group_messages">İletiler</string>
   <string name="NotificationChannel_missing_display_name">Bilinmeyen</string>
   <!--ProfileEditNameFragment-->
-  <string name="ProfileEditNameFragment_successfully_set_profile_name">Profil ismi başarıyla ayarlandı.</string>
+  <string name="ProfileEditNameFragment_successfully_set_profile_name">Profil adı başarıyla ayarlandı.</string>
   <string name="ProfileEditNameFragment_encountered_a_network_error">Bir ağ hatası ile karşılaşıldı.</string>
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">Signal kilitliyken hızlı cevap kullanılamaz!</string>
@@ -1064,10 +1050,11 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal içerik ve grup iletilerini kablosuz operatörünüz aracılığıyla taşıyabilmesi için MMS ayarlarının yapılmasını gerektirir. Cihazınız bu bilgiyi sağlamamaktadır. Bu durum bazen kilitli veya diğer kısıtlı yapılandırılmış cihazlar için geçerli olabilmektedir.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">İçerik veya grup iletileri gönderebilmek için \'Tamam\' seçeneğine dokunup istenen ayarları tamamlayınız. Operatörünüzün MMS ayarları genellikle \'operatörünüz MMS\' araştırılarak bulunabilir. Bunu bir kez yapmanız gerekecektir.</string>
   <!--profile_create_activity-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Sonra ayarla</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">BİTİR</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Bu bilgiyi kimler görebilir?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Adınız</string> -->
+  <string name="CreateProfileActivity_first_name_required">Ad (gerekli)</string>
+  <string name="CreateProfileActivity_last_name_optional">Soyad (isteğe bağlı)</string>
+  <string name="CreateProfileActivity_next">İleri</string>
+  <string name="CreateProfileActivity__username">Kullanıcı adı</string>
+  <string name="CreateProfileActivity__create_a_username">Bir kullanıcı adı oluşturun</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Paylaşılan içerik</string>
   <!--recipient_preferences-->
@@ -1289,7 +1276,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="conversation_callable_insecure__menu_call">Arama</string>
   <!--conversation_callable_secure-->
   <string name="conversation_callable_secure__menu_call">Signal araması</string>
-  <string name="conversation_callable_secure__menu_video">Signal görüntülü araması</string>
+  <string name="conversation_callable_secure__menu_video">Görüntülü Signal araması</string>
   <!--conversation_context-->
   <string name="conversation_context__menu_message_details">İleti ayrıntıları</string>
   <string name="conversation_context__menu_copy_text">Metni kopyala</string>
@@ -1395,12 +1382,12 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="Insights__percent">%</string>
   <string name="Insights__title">İçgörüler</string>
   <string name="InsightsDashboardFragment__title">İçgörüler</string>
-  <string name="InsightsDashboardFragment__signal_protocol_automatically_protected">Signal Protokolü geçtiğimiz %2$d gündeki iletilerinizin %%%1$d kadarını otomatik olarak korudu. Signal kullanıcıları arasındaki sohbetler her zaman uçtan uca şifrelidir.</string>
+  <string name="InsightsDashboardFragment__signal_protocol_automatically_protected">Signal Protokolü son %2$d gündeki iletilerinizin %%%1$d kadarını otomatik olarak korudu. Signal kullanıcıları arasındaki sohbetler her zaman uçtan uca şifrelidir.</string>
   <string name="InsightsDashboardFragment__boost_your_signal">Signal\'i güçlendir</string>
   <string name="InsightsDashboardFragment__not_enough_data">Yetersiz veri</string>
-  <string name="InsightsDashboardFragment__your_insights_percentage_is_calculated_based_on">İçgörü yüzdeniz son %1$d gün içerisinde kaybolmamış veya silinmemiş giden iletilere göre hesaplanır.</string>
+  <string name="InsightsDashboardFragment__your_insights_percentage_is_calculated_based_on">İçgörü yüzdeniz son %1$d gün içerisinde gönderdiğiniz kaybolmamış veya silinmemiş iletilere göre hesaplanır.</string>
   <string name="InsightsDashboardFragment__start_a_conversation">Sohbet başlat</string>
-  <string name="InsightsDashboardFragment__invite_your_contacts">Kişilerinizi Signal\'e davet ederek şifresiz SMS iletilerinin sınırlarını aşan yeni özelliklerle, güvenli konuşmaya başlayın.</string>
+  <string name="InsightsDashboardFragment__invite_your_contacts">Kişilerinizi Signal\'e davet ederek şifresiz SMS iletilerinin sınırlarını aşan yeni özelliklerle güvenli konuşmaya başlayın.</string>
   <string name="InsightsDashboardFragment__this_stat_was_generated_locally">Bu istatistikler yalnızca cihazınızda oluşturulup sizin tarafınızdan görüntülenebilir. Asla hiçbir yere aktarılmaz.</string>
   <string name="InsightsDashboardFragment__encrypted_messages">Şifreli iletiler</string>
   <string name="InsightsDashboardFragment__cancel">İptal</string>
@@ -1498,7 +1485,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Kaydolma Kilidi PIN\'iniz numaranızı izinsiz kaydolma denemelerinden korur. Bu özelliği istediğiniz zaman Signal\'in gizlilik ayarlarından devre dışı bırakabilirsiniz</string>
   <string name="RegistrationLockDialog_registration_lock">Kaydolma Kilidi</string>
   <string name="RegistrationLockDialog_enable">Etkinleştir</string>
-  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">Kaydolma Kilidi PIN\'iniz en az 4 rakam içermelidir.</string> -->
+  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_d_digits">Kayıt Kilidi PIN\'i en az %d haneli olmalıdır.</string>
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">Girmiş olduğunuz PIN\'ler uyuşmuyor.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Hizmete bağlanırken hata oluştu</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Kaydolma Kilidi PIN\'ini devre dışı bırak?</string>
