--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -273,12 +273,9 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Завірено</string>
   <!--CreateProfileActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Інформація щодо вашого профілю</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Не вдалося встановити фото профілю</string>
   <string name="CreateProfileActivity_problem_setting_profile">Не вдалося встановити профіль</string>
   <string name="CreateProfileActivity_profile_photo">Фото профілю</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">Задовге</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Ім’я профілю</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Налаштувати ваш профайл</string>
   <!--CustomDefaultPreference-->
   <string name="CustomDefaultPreference_using_custom">Використання власного: %s</string>
@@ -496,10 +493,6 @@
   <!--PlacePickerActivity-->
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Встановлена версія сервісів Google Play працює некоректно. Перевстановіть сервіси Google Play та спробуйте знову.</string>
-  <!--ProfileEditNameFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Зберегти</string> -->
-  <!--ProfileEditOverviewFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Профіль</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Оцінити Signal</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Якщо вам сподобався Signal, будь-ласка, оцініть його.</string>
@@ -944,10 +937,7 @@
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Для надсилання MMS-повідомлень Signal\'у необхідно знати налаштування APN вашого оператора. Однак ваш пристрій не надає цієї інформації - перевірте налаштування доступу до цих опцій.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Щоб мати можливість відправляти MMS-повідомлення, введіть інформацію про APN нижче. Потрібні значення для вашого оператора можна знайти в інтернеті за запитом \'оператор APN\' або в його службі підтримки. Це потрібно зробити тільки один раз.</string>
   <!--profile_create_activity-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Встановити пізніше</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">ЗАВЕРШИТИ</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Хто може бачити цю інформацію?</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Ваше ім\'я</string> -->
+  <string name="CreateProfileActivity_next">Далі</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Спільні медіа</string>
   <!--recipient_preferences-->
@@ -1339,7 +1329,6 @@
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Блокування доступу допомагає захистити Ваш телефонний номер від спроб несанкціонованого доступу. Ця функція може бути заборонена в будь-який час у налаштуваннях приватності Вашого Signal.</string>
   <string name="RegistrationLockDialog_registration_lock">Блокування доступу</string>
   <string name="RegistrationLockDialog_enable">Увімкнути</string>
-  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">ПІН блокування доступу повинен мати щонайменше 4 цифри.</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">Введені ПІНи не співпали.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Помилка підключення до сервісу</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Заборонити ПІН блокування доступу?</string>
