--- a/app/src/main/res/values-ur/strings.xml
+++ b/app/src/main/res/values-ur/strings.xml
@@ -271,12 +271,9 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">تصدیق شدہ</string>
   <!--CreateProfileActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">پروفائل کی معلومات</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">پروفائل تصویر کو ترتیب دینے میں خرابی </string>
   <string name="CreateProfileActivity_problem_setting_profile">پروفائل ترتیب دینے میں مسئلہ ہو رہا ہے۔</string>
   <string name="CreateProfileActivity_profile_photo">پروفائل کی تصویر</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">بہت لمبا</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">پروفائل نام</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">اپنی پروفائل کو ترتیب دیں</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Signal پروفائل آخر سے آخر تک خفیہ شدہ ہے، اور Signal سروس نے کبھی اس معلومات تک رسائی نہیں کی۔</string>
   <string name="CreateProfileActivity_set_avatar_description">اوتار ترتیب دیں</string>
@@ -551,17 +548,6 @@
   <string name="PlacePickerActivity_accept_address">ایڈریس قبول کریں</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">گوگل پلے سروسز کاجو ورژن آپ نے نصب کیا ہے وہ صحیح کام نہیں کر رہا۔ براہ کرم گوگل پلے سروسز دوبارہ نصب کریں اور دوبارہ کوشش کریں۔</string>
-  <!--ProfileEditNameFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">پروفائل کا نام</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">جب آپ کسی گفتگو کا آغاز کرتے ہیں یا کسی گفتگو کی درخواست کو قبول کرتے ہیں تو آپ کے پروفائل کا نام آپ کے رابطوں اور دوسرے صارفین یا گروپوں کے ذریعہ دیکھا جاسکتا ہے۔</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">محفوظ کریں</string> -->
-  <!--ProfileEditOverviewFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">پروفائل </string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">پروفائل کا نام</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">صارف کا نام</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">ایک پروفائل کا نام بنائیں</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">صارف نام بنائیں</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">جب آپ کسی گفتگو کا آغاز کرتے ہیں یا کسی گفتگو کی درخواست کو قبول کرتے ہیں تو آپ کا Signal پروفائل آپ کے روابط اور دوسرے صارفین یا گروپوں کے ذریعہ دیکھا جاسکتا ہے۔ <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">مزید جاننے کے لئے یہاں ٹیپ کریں</a>۔</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">ایپ کی درجہ بندی کریں</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">اگر آپ اس ایپ کو استعمال کرکے لطف اٹھا رہے ہیں، براہ کرم ایک لمحہ لیں جس سے درجہ بندی کرنے میں ہماری مدد ہو۔</string>
@@ -799,7 +785,7 @@
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">حالیہ اطلاعات چیک کرنے کے لیے Signal کھولیں۔</string>
   <string name="MessageNotifier_contact_message">%1$s%2$s</string>
   <string name="MessageNotifier_unknown_contact_message">رابطہ کریں</string>
-  <string name="MessageNotifier_reacted_to_your_message">آپ کے پیغام پر ردعمل ظاہر کیا:%1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_reacted_to_your_message">آپ کے پیغام پر ردعمل ظاہر کیا:%1$s</string> -->
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">پہلے سے طے شدہ</string>
   <string name="NotificationChannel_calls">کالز</string>
@@ -1057,10 +1043,9 @@
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal کیلئے ایم ایم ایس کی  ترتیبات کی ضرورت ہوتی ہے تاکہ آپ کے وائرلیس کیریئر کے ذریعہ میڈیا اور گروپ پیغامات کی فراہمی ہوسکے۔ آپ کی ڈیوائس اس معلومات کو دستیاب نہیں کرتا ہے ، جو کبھی کبھار لاک ڈیوائسز اور دیگر پابندی والی تشکیلات کے لئے درست ہوتا ہے۔</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">میڈیا اور گروپ پیغامات بھیجنے کے لئے ، \'OK\' پر ٹیپ کریں اور مطلوبہ ترتیبات کو مکمل کریں۔ آپ کے کیریئر کے لئے ایم ایم ایس کی ترتیبات عام طور پر \'آپ کے کیریئر اے پی این\' کی تلاش کرکے حاصل کی جاسکتی ہیں۔ آپ کو صرف ایک بار ایسا کرنے کی ضرورت ہوگی۔</string>
   <!--profile_create_activity-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">بعد میں سیٹ کریں</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">ختم کریں</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">یہ معلومات کون دیکھ سکتا ہے؟</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">آپ کا نام</string> -->
+  <string name="CreateProfileActivity_next">اگلا</string>
+  <string name="CreateProfileActivity__username">صارف کا نام</string>
+  <string name="CreateProfileActivity__create_a_username">صارف نام بنائیں</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">میڈیا اشتراک کریں</string>
   <!--recipient_preferences-->
@@ -1491,7 +1476,6 @@
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">رجسٹریشن لاک آپ کے فون نمبر کو غیر مجاز رجسٹریشن کی کوششوں سے بچانے میں مدد کرتا ہے۔ آپ کی Signal پرائیویسی کی ترتیبات میں کسی بھی وقت یہ خصوصیت غیر فعال کی جاسکتی ہے</string>
   <string name="RegistrationLockDialog_registration_lock">رجسٹریشن لاک</string>
   <string name="RegistrationLockDialog_enable">فعال کریں</string>
-  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">رجسٹریشن لاک پن کم از کم 4 ہندسوں کا ہونا چاہیے۔</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">جو دو پن آپ نے داخل کی ہیں میچ نہیں ہو رہی۔</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">سروس سے رابطے میں غلطی ہو رہی ہے</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">رجسٹریشن لاک پن معطل کریں؟</string>
