--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -53,15 +53,15 @@
   <string name="DraftDatabase_Draft_quote_snippet">(回复)</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">未找到选择媒体的应用。</string>
-  <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal 需要\"存储空间\"权限才能发送图片、视频以及音频，但是该权限已被永久禁用。请转到系统的应用设置菜单，找到权限设置，选择 Signal 应用，并启用\"存储空间\"权限。</string>
-  <string name="AttachmentManager_signal_requires_contacts_permission_in_order_to_attach_contact_information">Signal 需要\"通讯录\"权限才能发送联系人名片信息，但是该权限已被永久禁用。请转到系统的应用设置菜单，找到权限设置，选择 Signal 应用，并启用\"通讯录\"权限。</string>
-  <string name="AttachmentManager_signal_requires_location_information_in_order_to_attach_a_location">Signal 需要\"位置信息\"权限才能发送位置信息，但是该权限已被永久禁用。请转到系统的应用设置菜单，找到权限设置，选择 Signal 应用，并启用\"位置信息\"权限。</string>
-  <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Signal 需要\"相机\"权限才能拍照并发送相片，但是该权限已被永久禁用。请转到系统的应用设置菜单，找到权限设置，选择 Signal 应用，并启用\"相机\"权限。</string>
+  <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal 需“存储”权限，来发送图片、视频和音频，但该权限已永久禁用。请访问应用设置菜单，选择“权限”并启用“存储”。</string>
+  <string name="AttachmentManager_signal_requires_contacts_permission_in_order_to_attach_contact_information">Signal 需“通讯录”权限，来发送通讯录信息，但是该权限已永久禁用。请访问应用设置菜单，选择“权限”并启用“通讯录”。</string>
+  <string name="AttachmentManager_signal_requires_location_information_in_order_to_attach_a_location">Signal 需“位置”权限，来发送位置信息，但是该权限已永久禁用。请访问应用设置菜单，选择“权限”并启用“位置”。</string>
+  <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Signal 需“相机”权限，来拍摄照片，但是该权限已永久禁用。请访问应用设置菜单，选择“权限”并启用“相机”。</string>
   <!--AttachmentUploadJob-->
   <string name="AttachmentUploadJob_uploading_media">上传媒体中…</string>
   <string name="AttachmentUploadJob_compressing_video_start">压缩视频中…</string>
   <!--AudioSlidePlayer-->
-  <string name="AudioSlidePlayer_error_playing_audio">播放音频时出现错误！</string>
+  <string name="AudioSlidePlayer_error_playing_audio">播放音频出错！</string>
   <!--BlockedContactsActivity-->
   <string name="BlockedContactsActivity_blocked_contacts">已屏蔽的联系人</string>
   <!--BucketedThreadMedia-->
@@ -69,55 +69,55 @@
   <string name="BucketedThreadMedia_Yesterday">昨天</string>
   <string name="BucketedThreadMedia_This_week">本周</string>
   <string name="BucketedThreadMedia_This_month">本月</string>
-  <string name="BucketedThreadMedia_Large">大尺寸</string>
-  <string name="BucketedThreadMedia_Medium">媒体文件</string>
-  <string name="BucketedThreadMedia_Small">小尺寸</string>
+  <string name="BucketedThreadMedia_Large">大</string>
+  <string name="BucketedThreadMedia_Medium">中</string>
+  <string name="BucketedThreadMedia_Small">小</string>
   <!--CallScreen-->
-  <string name="CallScreen_Incoming_call">来电呼叫</string>
+  <string name="CallScreen_Incoming_call">来电</string>
   <!--CameraActivity-->
-  <string name="CameraActivity_image_save_failure">未能保存图像。</string>
+  <string name="CameraActivity_image_save_failure">无法保存图片。</string>
   <!--CameraXFragment-->
-  <string name="CameraXFragment_tap_for_photo_hold_for_video">单击拍照，长按录像</string>
-  <string name="CameraXFragment_capture_description">拍摄</string>
+  <string name="CameraXFragment_tap_for_photo_hold_for_video">点击拍照，长按录像</string>
+  <string name="CameraXFragment_capture_description">拍照</string>
   <string name="CameraXFragment_change_camera_description">切换摄像头</string>
   <string name="CameraXFragment_open_gallery_description">打开相册</string>
   <!--CameraContacts-->
   <string name="CameraContacts_recent_contacts">最近联系人</string>
   <string name="CameraContacts_signal_contacts">Signal 联系人</string>
   <string name="CameraContacts_signal_groups">Signal 群组</string>
-  <string name="CameraContacts_you_can_share_with_a_maximum_of_n_conversations">您最多可以与 %d 个会话共享</string>
+  <string name="CameraContacts_you_can_share_with_a_maximum_of_n_conversations">最多可与 %d 个对话共享。</string>
   <string name="CameraContacts_select_signal_recipients">选择 Signal 收件人</string>
   <string name="CameraContacts_no_signal_contacts">没有 Signal 联系人</string>
-  <string name="CameraContacts_you_can_only_use_the_camera_button">您可以仅使用相机按钮来发送照片给 Signal 联系人</string>
-  <string name="CameraContacts_cant_find_who_youre_looking_for">找不到您要找的人？</string>
+  <string name="CameraContacts_you_can_only_use_the_camera_button">仅可通过相机按钮来发送照片给 Signal 联系人。</string>
+  <string name="CameraContacts_cant_find_who_youre_looking_for">未找到联系人？</string>
   <string name="CameraContacts_invite_a_contact_to_join_signal">邀请联系人加入 Signal</string>
   <string name="CameraContacts__menu_search">搜索</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">删除</string>
   <string name="ClearProfileActivity_remove_profile_photo">删除头像</string>
   <!--CommunicationActions-->
-  <string name="CommunicationActions_no_browser_found">未能找到网页浏览器。</string>
-  <string name="CommunicationActions_a_cellular_call_is_already_in_progress">一个基站通话已在处理中。</string>
+  <string name="CommunicationActions_no_browser_found">未找到网页浏览器。</string>
+  <string name="CommunicationActions_a_cellular_call_is_already_in_progress">手机通话正在进行。</string>
   <string name="CommunicationActions_start_video_call">发起视频通话？</string>
   <string name="CommunicationActions_start_voice_call">发起语音通话？</string>
   <string name="CommunicationActions_cancel">取消</string>
-  <string name="CommunicationActions_call">拨号</string>
+  <string name="CommunicationActions_call">呼叫</string>
   <!--ConfirmIdentityDialog-->
-  <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">%1$s 的安全代码发生了改变。这可能是因为有人正在尝试截获你们的通讯，或者 %2$s 只是重新安装了 Signal 。</string>
-  <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">您可能希望验证这个联系人的安全码。</string>
+  <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">%1$s 安全码已更改。可能有人试图截获你们之间的通信，或者只是 %2$s 重装了 Signal。</string>
+  <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">您可能需要验证该联系人的安全码。</string>
   <string name="ConfirmIdentityDialog_accept">接受</string>
   <!--ContactsCursorLoader-->
   <string name="ContactsCursorLoader_recent_chats">最近对话</string>
   <string name="ContactsCursorLoader_contacts">联系人</string>
   <string name="ContactsCursorLoader_groups">群组</string>
-  <string name="ContactsCursorLoader_phone_number_search">号码搜索</string>
+  <string name="ContactsCursorLoader_phone_number_search">手机号码搜索</string>
   <string name="ContactsCursorLoader_username_search">用户名搜索</string>
   <!--ContactsDatabase-->
   <string name="ContactsDatabase_message_s">信息 %s</string>
-  <string name="ContactsDatabase_signal_call_s"> Signal 呼叫 %s</string>
+  <string name="ContactsDatabase_signal_call_s">Signal 呼叫 %s</string>
   <!--ContactNameEditActivity-->
-  <string name="ContactNameEditActivity_given_name">名字</string>
-  <string name="ContactNameEditActivity_family_name">姓氏</string>
+  <string name="ContactNameEditActivity_given_name">名</string>
+  <string name="ContactNameEditActivity_family_name">姓</string>
   <string name="ContactNameEditActivity_prefix">前缀</string>
   <string name="ContactNameEditActivity_suffix">后缀</string>
   <string name="ContactNameEditActivity_middle_name">中间名</string>
@@ -130,18 +130,18 @@
   <!--ConversationItem-->
   <string name="ConversationItem_error_not_delivered">发送失败，点击查看详情</string>
   <string name="ConversationItem_received_key_exchange_message_tap_to_process">已收到密钥交换信息，点击以开始处理。</string>
-  <string name="ConversationItem_group_action_left">%1$s 已经离开了该群组。</string>
+  <string name="ConversationItem_group_action_left">%1$s 已经离开该群组。</string>
   <string name="ConversationItem_click_to_approve_unencrypted">发送失败，点击使用不安全的方式发送</string>
-  <string name="ConversationItem_click_to_approve_unencrypted_sms_dialog_title">退回未加密的短信？</string>
-  <string name="ConversationItem_click_to_approve_unencrypted_mms_dialog_title">退回到未加密的彩信？</string>
-  <string name="ConversationItem_click_to_approve_unencrypted_dialog_message">由于对方已经不再是 Signal 的使用者，当前消息 <b>不会</b> 被发送。\n\n发送不加密的信息？</string>
-  <string name="ConversationItem_unable_to_open_media">无法找到能打开该媒体的应用。</string>
+  <string name="ConversationItem_click_to_approve_unencrypted_sms_dialog_title">使用未加密的短信？</string>
+  <string name="ConversationItem_click_to_approve_unencrypted_mms_dialog_title">使用未加密的彩信？</string>
+  <string name="ConversationItem_click_to_approve_unencrypted_dialog_message">由于对方已不再使用 Signal，该消息将<b>不是</b>加密的。\n\n发送不加密的信息？</string>
+  <string name="ConversationItem_unable_to_open_media">未找到可打开该媒体的应用。</string>
   <string name="ConversationItem_copied_text">已复制 %s</string>
   <string name="ConversationItem_from_s">来自 %s</string>
-  <string name="ConversationItem_to_s">至 %s</string>
-  <string name="ConversationItem_read_more"> 查看更多</string>
-  <string name="ConversationItem_download_more"> 下载更多</string>
-  <string name="ConversationItem_pending"> 等待中</string>
+  <string name="ConversationItem_to_s">发至 %s</string>
+  <string name="ConversationItem_read_more">  查看更多</string>
+  <string name="ConversationItem_download_more">  下载更多</string>
+  <string name="ConversationItem_pending">  等待中</string>
   <!--ConversationActivity-->
   <string name="ConversationActivity_reset_secure_session_question">重置安全会话？</string>
   <string name="ConversationActivity_this_may_help_if_youre_having_encryption_problems">该选项将会有助于解决您在会话中遇到的加密问题，但是您的消息可能会受人控制。</string>
@@ -256,12 +256,9 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">确认</string>
   <!--CreateProfileActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">个人信息</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">无法设置头像</string>
   <string name="CreateProfileActivity_problem_setting_profile">无法设置个人信息</string>
   <string name="CreateProfileActivity_profile_photo">头像</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">过长</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">资料名称</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">设置您的资料</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Signal上的个人资料都是端到端加密的。Signal服务永远不会有权访问此数据。</string>
   <string name="CreateProfileActivity_set_avatar_description">设置头像</string>
@@ -529,17 +526,6 @@
   <string name="PlacePickerActivity_accept_address">接受地址</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">您当前所安装的 Google Play 服务没有正常的工作。请尝试重新安装 Google Play 服务然后重试。</string>
-  <!--ProfileEditNameFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">昵称</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">当你发起对话或接受他人的对话请求后，你的联系人和其他用户及群组都可以看到你的昵称。</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">保存</string> -->
-  <!--ProfileEditOverviewFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">资料</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">昵称</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">用户名</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">输入你的昵称</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">创建一个用户名</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">当你发起对话或接受他人的对话请求时，你的联系人和其他用户及群组都可以查看你的个人档案。</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">对此应用评分</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">如果您喜欢使用此应用，请使用片刻时间对其进行打分。</string>
@@ -780,7 +766,7 @@
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">打开 Signal 查看最近的通知</string>
   <string name="MessageNotifier_contact_message">%1$s%2$s</string>
   <string name="MessageNotifier_unknown_contact_message">联系人</string>
-  <string name="MessageNotifier_reacted_to_your_message">回复你的信息：%1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_reacted_to_your_message">回复你的信息：%1$s</string> -->
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">默认</string>
   <string name="NotificationChannel_calls">通话</string>
@@ -1031,10 +1017,9 @@
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal 需要通过运营商获取您的彩信设置才能接受彩信或组播信息，但是您的设备没有这些信息，可能是由于设备被锁定或者访问受到限制。</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">要发送媒体和群组消息，点击“好”并完成所需的设置。此彩信设置将会通过搜索您的运营商信息来完成。此设置只会要求您进行一次。</string>
   <!--profile_create_activity-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">稍后设置</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">完成</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">谁能看见这些信息？</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">你的名字</string> -->
+  <string name="CreateProfileActivity_next">下一步</string>
+  <string name="CreateProfileActivity__username">用户名</string>
+  <string name="CreateProfileActivity__create_a_username">创建一个用户名</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">分享媒体文件</string>
   <!--recipient_preferences-->
@@ -1464,7 +1449,6 @@
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">注册锁能够帮助保护您的电话号码，防止其在未经允许的情况下被注册使用。您可以在任何时候在 Signal 隐私设置里关闭这项功能。</string>
   <string name="RegistrationLockDialog_registration_lock">注册锁</string>
   <string name="RegistrationLockDialog_enable">启用</string>
-  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">注册锁定 PIN 至少需要 4 位</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">两次输入的 PIN 不一样</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">无法连接到服务</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">禁用注册锁定 PIN？</string>
