--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -256,12 +256,9 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">已驗證</string>
   <!--CreateProfileActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">你的個人資訊</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">頭像照片設定出現錯誤</string>
   <string name="CreateProfileActivity_problem_setting_profile">個人資訊設定出現問題</string>
   <string name="CreateProfileActivity_profile_photo">頭像照片</string>
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">太長</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">使用者名稱</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">設定你的資訊</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Signal 資料是點對點加密，及Signal 服務絕不會讀取這些資訊。</string>
   <string name="CreateProfileActivity_set_avatar_description">設定頭像</string>
@@ -529,17 +526,6 @@
   <string name="PlacePickerActivity_accept_address">接受地址</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">您目前安裝的 Google Play 服務版本無法正常運作。請重新安裝 Google Play 服務然後重試。</string>
-  <!--ProfileEditNameFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">個人資料名稱</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">當你發起對話或接受對話要求時，你的聯絡人以及其他使用者或群組可以看到你的個人資料名稱。</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">儲存</string> -->
-  <!--ProfileEditOverviewFragment-->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">個人資訊</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">個人資料名稱</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">使用者名稱</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">創立一個個人資料名稱</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">創立一個使用者名稱</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">當你發起對話或接受對話要求時，你的聯絡人以及其他使用者或群組可以看到你的 Signal 個人資料。<a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles"> 點擊此處了解更多資訊</a>。</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">評分這個應用程式</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">如果您喜歡使用此應用程式，請使用片刻時間幫我們對其進行評分。</string>
@@ -783,7 +769,7 @@
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">開啟 Signal 以查驗最近的通知。</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
   <string name="MessageNotifier_unknown_contact_message">聯絡人</string>
-  <string name="MessageNotifier_reacted_to_your_message">已傳送到你的訊息:%1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_reacted_to_your_message">已傳送到你的訊息:%1$s</string> -->
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">預設</string>
   <string name="NotificationChannel_calls">通話</string>
@@ -1032,10 +1018,9 @@
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal 需要多媒體訊息設定以透過業者傳輸媒體與群組訊息。您的裝置沒有所需的資訊，有可能是由於裝置被鎖定或者其他限制設定。</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">傳送媒體檔案或群組訊息，請按下 \"OK\" 並完成必要的設定。您所使用電信業者相關的MMS多媒體簡訊設定可能羅列在 \'無線與網路／行動網路\'的設定項目內。且您只需設定一次。</string>
   <!--profile_create_activity-->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">稍後設定</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">完成</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">誰可以看到這個資訊？</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">你的名字</string> -->
+  <string name="CreateProfileActivity_next">下一步</string>
+  <string name="CreateProfileActivity__username">使用者名稱</string>
+  <string name="CreateProfileActivity__create_a_username">創立一個使用者名稱</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">分享的媒體</string>
   <!--recipient_preferences-->
@@ -1464,7 +1449,6 @@
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">註冊鎖定協助護你的電話號碼，免於未經授權註冊的企圖。此功能可以隨時在 Signal 的隱私權設定內關閉。</string>
   <string name="RegistrationLockDialog_registration_lock">註冊鎖定</string>
   <string name="RegistrationLockDialog_enable">啟用</string>
-  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">註冊登入鎖定 PIN 碼至少必須為 4 位數。</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">你輸入的兩個 PIN 碼不一致。</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">連線到服務錯誤</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">關閉註冊鎖定 PIN 碼？</string>
